/* སྡེ་སྲིད་ང་བཞི་པའི་མཛད་རྣམ་མཐའ་མ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -820,6 +820,75 @@
 			
 <big>སྡེ་སྲིད་སྐྱིད་ཚལ་པ་རྡོ་རྗེ་རྒྱལ་མཚན་མཆོག་ ཆོས་སྲིད་གཉིས་ཆ་ར་ལུ་ཕན་པའི་ཕྱག་ལཱ་མཛད་བཞུགས་པའི་བར་ན་ར་ སྡེ་སྲིད་ཁོ་རའི་སྲུང་འཁོརཔ་སྤ་ཕྲུག་ཟེར་མི་གིས་ཞུཝ་བཞིན་དུ་ རྗེ་མཁན་ཁྲི་རབས་སོ་དགུ་པ་སྒྲ་སློབ་བློ་གྲོས་རྒྱལ་མཚན་མཆོག་ སྐུ་གཟུགས་མ་བདེ་བར་ ཆུ་ཕོ་ཚ་ཆུ་ལུ་བྱོན་ཏེ་བཞུགས་པའི་སྐབས་ མཚན་སློབ་པད་དཀར་འོད་ཟེར་མི་དེ་ མཁན་ཁྲི་ ༤༠ པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ད་ནུག། དེ་ལུ་གཟིགས་ཏེ་ མཁན་ཁྲི་སོ་དགུ་པ་ཤཱཀྱ་རྒྱལ་མཚན་ཐུགས་ལུ་ ང་རྒྱལ་དྲག་པོ་བསྐྱེད་དེ་ དགོངས་འདུས་རྟ་ནག་གི་སྒོ་ལས་ ལས་སྦྱོར་མཛད་པ་ལུ་བརྟེན་ སྤྱི་ལོ་ ༡༨༧༩ གི་ལོ་ལུ་ སྡེ་པ་རྡོ་རྗེ་རྒྱལ་མཚན་མཆོག་ ཚེ་བསྟུངས་ཏེ་གཤགས་སོ་ནུག་གོ།།</big>
 
+
+=== སྡེ་སྲིད་ང་ལྔ་པ་ ཆོས་རྒྱལ་བཟང་པོ་གི་མཛད་རྣམ། ===
+==== སྡེ་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། 	 ====
+	
+<big>སྡེ་པ་ཆོས་རྒྱལ་བཟང་པོ་མཆོག་ ཐིམ་ཕུག་ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ནང་གསེས་ སྟོད་ཝང་དར་ལུང་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་དྲུག་པ་ཨུ་མ་དྷེ་ཝ་གི་ཚ་བོ་སྦེ་སྐུ་འཁྲུངས་ཡོདཔ་དང་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ དགེ་འདུན་གྱི་སྡེ་ལུ་འཛུལ་ཞུགས་མཛད་ཡོདཔ་ཨིན་པས།</big>
+==== གོ་གནས་བཞེས་པའི་སྐོར། 	 ====
+		
+<big>སྡེ་སྲིད་ཆོས་རྒྱལ་བཟང་པོ་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་དྲུག་པའི་སྐུ་ཚ་བོ་ཅིག་འབད་ནི་འདི་གིས་ ཨུ་མ་དྷེ་ཝ་ཁོ་ར་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་གོ་གནས་བཞེསཔ་ད་ སྡེ་སྲིད་ཆོས་རྒྱལ་བཟང་པོ་ཡང་ གྲྭ་ཚང་ལས་ཐོན་ཏེ་ ཐིམ་རྫོང་པའི་ནོར་དཔོན་གྱི་ཕྱག་འགན་བཞེས་བཞུགས་ནུག། ནོར་དཔོན་གྱི་གོ་གནས་བཞེས་བཞུགསཔ་ད་ སྡེ་པ་ཨུ་མ་དྷེ་ཝ་ (ཤེས་རབ་ཐར་ཕྱིན་མཆོག་)  སྡེ་སྲིད་ཁྲི་གྲོགས་ སྡེ་སྲིད་ཀུན་དགའ་དཔལ་ལྡན་གྱིས་ གཟིམ་དཔོན་གྲྭ་ཅུང་ལུ་བཀའ་སྐུལ་གནང་ཐོག་ལས་ ཆོས་རྒྱལ་བཟང་པོ་རའི་ཨ་ཞང་སྡེ་སྲིད་ཨུ་མ་དྷེ་ཝ་དེ་རྐུ་གསོད་རྐྱབ་ཏེ་ བཀྲོངས་དཔ་ལས་ དེའི་དགྲ་ལན་ལུ་ ནོར་དཔོན་དང་ཀ་ཝང་སངས་རྒྱས་གཉིས་ཀྱིས་ སྡེ་སྲིད་ཀུན་དགའ་དཔལ་ལྡན་གྱི་གཟིམ་དཔོན་གྲྭ་ཅུང་དེ་བཀྲོངས་ད་ནུག། དེའི་ཤུལ་ལུ་  ཁོང་གཉིས་གཞུང་ཕྱོགས་ལུ་བཞུགས་གོ་མ་བདེ་བར་ ལ་ཡག་ལས་བརྒྱུད་དེ་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་བཞུགས་སར་སོང་སྟེ་ འཇིགས་མེད་རྣམ་རྒྱལ་གྱི་སྒར་ལྟོ་པའི་གྲས་ཁར་འཛུལ་སྡོད་ནུག། སྤྱི་ལོ་ ༡༨༦༩ གི་ལོ་ལུ་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་ སྤུངས་རྫོང་པའི་དམག་རྒྱབ་ལུ་འབྱོནམ་ད་ ཆོས་རྒྱལ་བཟང་པོ་ཡང་ དཔོན་སློབ་ཀྱི་ཕྱག་ཞུ་སྟེ་ དམག་རྐྱབ་པའི་སྐབས་ལུ་ འཇིགས་མེད་རྣམ་རྒྱལ་དང་སྤུངས་རྫོང་པའི་དགྲ་ དབང་རྫོངཔ་ཀུན་ལེགས་རྡོ་རྗེ་འདི་ ཆོས་རྒྱལ་བཟང་པོ་གིས་བསྒྲལ་དཔ་ལས་ དེའི་ངལ་རངས་ལུ་ གཞུང་མགྲོན་གཉེར་གྱི་གོ་གནས་ལུ་བསྐོ་བཞག་མཛད་གནང་ནུག།</big>
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་སྐོར། ==== 
+			
+<big>སྡེ་སྲིད་ཁྲི་རབས་ང་བཞི་པ་རྡོ་རྗེ་རྣམ་རྒྱལ་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ར་གཤགས་སོཔ་ལས་ སྤྱི་ལོ་ ༡༨༧༩ གི་ལོ་ལུ་ སྡེ་སྲིད་ཁྲི་ཟུར་འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་ གཞུང་མགྲོན་གཉེར་ཆོས་རྒྱལ་བཟང་པོ་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ང་ལྔ་པའི་ཁྲི་ལུ་བསྐོ་བཞག་མཛད་གནང་ནུག།</big>
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ==== 
+			
+<big>རྗེ་མཁན་ཁྲི་རབས་ ༤༠ པ་མཁན་ཆེན་པད་དཀར་འོད་ཟེར་མཆོག་གིས་ སྡེ་པ་རྡོ་རྗེ་རྣམ་རྒྱལ་དང་ དེའི་སྲུང་འཁོརཔ་སྤ་ཕྲུག་གཉིས་ཀྱི་དཀྲོག་ཁ་ལུ་གསན་ཏེ་ རྗེ་མཁན་གྱི་ཁྲི་ལུ་བྱོན་དཔ་ལས་ རྗེ་སྒྲ་སློབ་བློ་གྲོས་རྒྱལ་མཚན་གྱིས་མ་རངས་པར་ ང་རྒྱལ་གྱི་ཐོག་ལས་ དགྲ་ངན་ལས་སྦྱོར་མཛད་ཡོདཔ་ལས་བརྟེན་ རྗེ་མཁན་ཆེན་པད་དཀར་འོད་ཟེར་མཆོག་ སྤྱི་ལོ་ ༡༨༨༡ གི་ལོ་ལུ་ ཁྲི་ཐོག་ལུ་ར་གཤགས་སོ་ནུག། དེ་ལས་ སྡེ་སྲིད་ཆོས་རྒྱལ་བཟང་པོ་གིས་ གྲུབ་དབང་ངག་དབང་དོན་ལྡན་མཆོག་ རྗེ་མཁན་ཁྲི་རབས་ཞེ་གཅིག་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་གནང་ནུག།</big> 
+==== སྡེ་སྲིད་ཀྱི་མཛད་པ་མཐའ་མ། ==== 
+			
+<big>སྡེ་སྲིད་ཆོས་རྒྱལ་བཟང་པོ་མཆོག་ སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་ལུ་ ཆོས་སྲིད་གཉིས་ལུ་ཕན་པའི་་ཕྱག་ལཱ་མང་རབས་ཅིག་མཛད་དེ་ མི་ལོ་གཉིས་དེ་ཅིག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བཞུགས་པའི་མཐའ་མར་ སྤྱི་ལོ་ ༡༨༨༡ རང་ལུགས་གནམ་ལོ་ལྕགས་སྦྲུལ་གྱི་ལོ་ལུ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ཁ་ར་ དགོངས་པ་རྫོགས་སོ་ནུག་གོ།།</big>
+
+=== སྡེ་སྲིད་ཁྲི་རབས་ང་དྲུག་པ་ བླམ་ཚེ་དབང་ ༼བསོད་ནམས་རྒྱལ་མཚན་༽ གི་མཛད་རྣམ། ===
+==== སྡེ་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། 	 ====
+<big>སྡེ་སྲིད་བླམ་ཚེ་དབང་མཆོག་ ཐིམ་ཕུག་ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ནང་གསེས་ ཀ་ཝང་རྒེད་འོག་ ཀ་ཝང་བྱང་ས་ལུ་ ཐིམ་ཕུག་རྫོང་དཔོན་ཀ་ཤ་གི་སྲས་ལུ་སྐུ་འཁྲུངས་ནུག། སྡེ་སྲིད་མཆོག་གི་ཡབ་ཐིམ་རྫོངཔ་འབད་ནི་འདི་གིས་ སྡེ་སྲིད་མཆོག་ ཁོ་རའི་ཨ་པའི་བཀའ་དང་འཁྲིལ་ཏེ་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ རྫོང་གོང་མ་ཟེར་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་སྒར་ལྟོའི་གྲས་ཁར་ ་འཛུལ་ཏེ་བཞུགས་ནུག། བླམ་ཚེ་དབང་གི་ཕོ་རྒནམ་ ཀ་ཝང་མ་མཁལ་དེ་ དབང་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་ཀྱིས་ ཐིམ་ཕུག་རྫོང་དཔོན་ཁ་གསར་སྟོབས་རྒྱས་བཀྲོངས་པའི་ཤུལ་ལུ་ ཐིམ་ཕུག་རྫོང་དཔོན་སྦེ་བསྐོ་བཞག་མཛད་གནང་ནུག། ཨིན་རུང་ ཐིམ་ཕུག་རྫོང་དཔོན་ཁ་གསར་སྟོབས་རྒྱས་དེ་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་གྱི་སྐུ་ཉེ་འབད་ནི་འདི་གིས་ སྤུངས་རྫོང་པའི་དམག་རྒྱབ་སྦེ་ཁ་བཟེད་དེ་ ཕྱད་མདའ་རྐྱབ་པའི་སྐབས་ལུ་ ཁོང་ཀ་ཝངཔ་གཉིས་ཀྱི་བྱང་ཕྱད་ འཇིགས་མེད་རྣམ་རྒྱལ་ཨིན་པས། དབང་རྫོངཔ་དར་ལུང་སྟོབས་རྒྱས་གྱོངས་ཞིནམ་ལས་ ཀ་ཝང་བླམ་ཚེ་དབང་གིས་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་བཞུགས་སར་མགུ་བཏགས་ཏེ་ ཕྱག་ལེགས་ཤོམ་སྦེ་ཞུ་བ་ལུ་བརྟེན་ འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་ ཀ་ཝང་བླམ་ཚེ་དབང་དེ་ ཐིམ་རྫོང་པའི་གོ་གནས་ལུ་བསྐོ་བཞག་མཛད་གནང་ནུག།</big>
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་ལོ་རྒྱུས། ==== 
+<big>སྡེ་སྲིད་ཁྲི་རབས་ང་ལྔ་པ་ཆོས་རྒྱལ་བཟང་པོ་མཆོག་ སྤྱི་ལོ་ ༡༨༨༡ གི་ལོ་ལུ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ར་གཤགས་སོཔ་ལས་ གོང་ས་ཨོ་རྒྱན་དབང་ཕྱུག་དང་ དགེ་འདུན་དམངས་འཛོམས་ཐོག་ལས་ ཐིམ་ཕུག་རྫོང་དཔོན་བླམ་ཚེ་དབང་འདི་ སྤྱི་ལོ་ ༡༨༨༢ གི་ལོ་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ང་དྲུག་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག།</big>
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ==== 
+<big>སྡེ་སྲིད་མཆོག་ སྤྱི་ལོ་ ༡༨༨༢ ལས་ ༡༨༨༤ ཚུན་ སྡེ་ཁྲི་བཟུང་སྟེ་ བསྟན་འགྲོ་དང་ཆོས་སྲིད་ལུགས་གཉིས་ལུ་ཕྱག་ཕྱིད་ཞུ་སྟེ སྡེ་ཁྲི་མི་ལོ་གཉིས་དེ་ཅིག་བཟུང་བའི་མཐའ་མར་ ཁྲི་ཐོག་ལུ་ར་གཤགས་སོ་ནུག་གོ།།</big>
+
+=== སྡེ་སྲིད་ཁྲི་རབས་ང་བདུན་པ་ མཆོད་དཔོན་དགའ་བ་བཟང་པོའི་མཛད་རྣམ། ===
+==== སྡེ་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ།	 ====
+<big>སྡེ་སྲིད་མཆོག་ ཐིམ་ཕུག་ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ནང་གསེས་ དཀར་སྦིས་ས་འབྱུང་གཞི་ནང་ལུ་སྐུ་འཁྲུངས་ཡོདཔ་དང་ མཚན་དགའ་བ་བཟང་པོ་ཟེར་གསོལ་ནུག། དགའ་བ་བཟང་པོ་ཁོ་ར་སྐུ་ན་ཆུང་ཀུ་ཅིག་ལས་ར་ གྲྭ་ཚང་འདུས་སྡེ་ལུ་འཛུལ་བཞུགས་འབད་དེ་ གྲྭ་ཚང་གི་སྒྲིག་ལམ་ཆོས་གསུམ་དང་ གར་ཐིག་དབྱངས་གསུམ། དཀྱིལ་ཆོག་ཚུ་ལུ་ མཁས་པ་སྦྱངས་ཡོདཔ་མ་ཚད་ མཆོད་དཔོན་གྱི་ཕྱག་འགན་ཡང་བཞེས་ཏེ་བཞུགས་ནུག།</big> 
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་ལོ་རྒྱུས། 	 ====
+		
+<big>སྡེ་སྲིད་ཁྲི་རབས་ང་དྲུག་པ་བླམ་ཚེ་དབང་མཆོག་ སྤྱི་ལོ་ ༡༨༨༤ ལུ་སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ར་གཤགས་སོཔ་ལས་ ཐིམ་ཕུག་རྫོང་དཔོན་ཨ་ལུ་རྡོ་རྗེ་གིས་ ཀྲོང་གསར་དཔོན་སློབ་ཨོ་རྒྱན་དབང་ཕྱུག་ལུ་ བསྟུན་གྲོས་ཨ་ཙི་ཅིག་ར་མ་ཞུ་བར་ ཐག་རང་བཅད་ཐོག་ལས་ མཆོད་དཔོན་དགའ་བ་བཟང་པོ་དེ་ དབྱིན་ལོ་ ༡༨༨༤ གི་ལོ་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ང་བདུན་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ད་ནུག།</big>
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ་མཐའ་མ། ====  
+<big>མཆོད་དཔོན་དགའ་བ་བཟང་པོ་ཁོ་ར་སྡེ་ཁྲི་ཁར་བཞུགསཔ་ད་ ཐིམ་རྫོངཔ་ཨ་ལུ་རྡོ་རྗེ་དང་སྤུངས་རྫོངཔ་ཕུན་ཚོགས་རྡོ་རྗེ་གཉིས་ཀྱིས་ ཀྲོང་གསར་དཔོན་སློབ་ཨོ་རྒྱན་དབང་ཕྱུག་ལུ་ངོ་རྒོལ་གྱི་ནང་འཁྲུག་ལངམ་ད་ སྤུངས་རྫོངཔ་དང་ཐིམ་རྫོངཔ་གཉིས་ཕམ་སོཔ་ལས་ སྤུངས་རྫོངཔ་ཕུན་ཚོགས་རྡོ་རྗེ་དང་ཐིམ་རྫོངཔ་ཨ་ལུ་རྡོ་རྗེ་གཉིས་ཆ་ར་ བོད་ཕྱོགས་ལུ་བྱོག་ཡར་སོ་ནུག། དེའི་ཤུལ་ལུ་ར་ སྡེ་སྲིད་མཆོད་དཔོན་མཆོག་ སྡེ་ཁྲི་ལུ་བག་མ་ཆགས་པར་ སྤྱི་ལོ་ ༡༨༨༥ གི་ལོ་འགོ་བཙུགས་ཁམས་ལུ་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་གནང་ནུག། སྡེ་སྲིད་ཁྲི་རབས་ང་བདུན་པ་མཆོད་དཔོན་དགའ་བ་བཟང་པོ་མཆོག་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་པའི་ཤུལ་ལུ་ མདོ་སྡེ་བྲག་གི་དགོན་པ་ལུ་བྱོན་ཏེ་བཞུགསཔ་ད་ ཀྲོང་གསར་དཔོན་སློབ་ཨོ་རྒྱན་དབང་ཕྱུག་གིས་ སྡེ་སྲིད་ཁྲི་ཟུར་ལུ་ འབུལ་བ་ཐོབ་ལམ་དང་འཁྲིལ་ ག་ཨིནམ་སྦེ་ཕུལ་ཏེ་ མདོ་སྡེ་བྲག་གི་དགོན་པ་ལུ་ མི་ལོ་ཉེར་དྲུག་དེ་ཅིག་བཞུགས་པའི་ཤུལ་ལུ་ དགོངས་པ་རྫོགས་སོ་ནུག་གོ།།
+</big>
+
+=== སྡེ་སྲིད་ཁྲི་རབས་ང་བརྒྱད་པ་ དབྱངས་སློབ་སངས་རྒྱས་རྡོ་རྗེའི་མཛད་རྣམ། ===
+<big>སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་མ་བྱོན་གོང་གི་མཛད་པ། སྡེ་སྲིད་དབྱངས་སློབ་སངས་རྒྱས་རྡོ་རྗེ་མཆོག་ སྤ་རོ་ སྤང་པའི་ས་ལུ་ གཏེར་སྟོན་ཤེས་རབ་མེ་འབར་གྱི་དབོན་ལུ་ སྤྱི་ལོ་ ༡༨༣༩ གི་ལོ་ལུ་ སྐུ་འཁྲུངས་ཡོདཔ་ད་ མཚན་ལུ་ སངས་རྒྱས་རྡོ་རྗེ་ཟེར་གསོལ་ནུག། སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ར་ གཞུང་དགེ་འདུན་གྱི་སྡེ་ལུ་བཞུགས་ཏེ་ གཞུང་གི་སྒྲིག་ལམ་དང་ གར་ཐིག་དབྱངས་གསུམ་ དེ་ལས་ཤེས་བྱ་མང་པོ་ཅིག་ལུ་མཁས་པ་སྦྱངས་ཡོད་པ་ལུ་བརྟེན་ དབྱངས་སློབ་ཀྱི་གོ་གནས་བཞེས་གནང་ཡོདཔ་མ་ཚད་ ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་ སྡེ་ཁྲི་ལུ་བྱོན་གནངམ་ད་ བཀའ་བགྲོསཔ་མཛད་གནང་ནུག།<br>
+སྡེ་སྲིད་ཁྲི་རབས་ང་བརྒྱད་པའི་ཁྲི་ལུ་བྱོན་གནང་པའི་སྐོར། སྡེ་སྲིད་ཁྲི་རབས་ང་བདུན་པ་ དགའ་བ་བཟང་པོ་མཆོག་ སྤྱི་ལོ་ ༡༨༨༥ གི་ལོ་ལུ་ གོང་ས་ཨྱོན་དབང་ཕྱུག་གིས་ དགོངས་ཡངས་གནང་པའི་ཤུལ་ སྡེ་ཁྲི་ལུ་བཞུགས་མི་ག་ཡང་མེདཔ་ལས་ སྡེ་ཟུར་དགའ་བ་བཟང་པོ་གི་ཚབ་ལུ་ དབྱངས་སློབ་སངས་རྒྱས་རྡོ་རྗེ་བསྐོ་བཞག་མཛད་གནང་ནུག།<br>
+སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་པ། སྡེ་སྲིད་མཆོག་ ཧེ་མ་ལས་ དགེ་འདུན་གྱི་སྡེ་ནང་བཞུགས་མི་ཅིག་འབད་ནི་འདི་གིས་ ཆོས་ལུགས་མི་ཉམས་གོང་འཕེལ་གྱི་ཕྱག་ལཱ་མཛད་གནང་ཡོདཔ་མ་ཚད་ སྲིད་ཀྱི་ལུགས་ཡང་ རང་གིས་ཆོས་ལུགས་ལུ་རྩིས་བཀུར་མཛད་དོ་བཟུམ་སྦེ་ར་ སྲིད་ཀྱི་ལུགས་ལུ་ཡང་རྩིས་བཀུར་མཛད་དེ་ རྒྱལ་ཁབ་ཀྱི་ངོ་རྟགས་བཟང་པོ་ ཆོས་སྲིད་གཉིས་ཀྱི་ལུགས་སྲོལ་བཟང་པོ་ མི་ཉམས་གོང་འཕེལ་གྱི་ཕྱག་འགན་བཞེས་གནང་ནུག། དེ་མ་ཚད་ སྡེ་སྲིད་ཁོ་བོའི་སྐབས་ལུ་ སྐྱབས་རྗེ་ཁྲི་རབས་ ༤༡ ངག་དབང་དོན་གྲུབ་མཆོག་ རྗེའི་ཁྲི་ལུ་ར་དགོངས་པ་རྫོགས་སོངམ་ལས་ སྤྱི་ལོ་ ༡༨༨༦ གི་ལོ་འདི་ལུ་ར་ ཆོས་རྗེ་ཕྲིན་ལས་རྒྱལ་མཚན་མཆོག་ རྗེའི་ཁྲི་ལུ་མངའ་གསོལ་མཛད་གནང་ཡོདཔ་ཨིན་རུང་ ཆོས་རྗེ་མཆོག་ རྗེའི་ཁྲི་ཐོག་ལུ་ ལོ་གཉིས་བཞུགས་པའི་ཤུལ་ལུ་ དགོངས་ཞུ་མཛད་གནང་ནུག། ཆོས་རྗེ་སྐྱབས་རྗེའི་ཁྲི་ལས་ དགོངས་ཞུ་མཛད་གནང་པའི་ཤུལ་ ཁོ་བོའི་ཚབ་ལུ་ སྒྲ་སློབ་བསྟན་འཛིན་ལྷུན་གྲུབ་མཆོག་ རྗེ་ཁྲི་རབས་ ༤༣ པའི་ཁྲི་ལུ་ མངའ་གསོལ་མཛད་གནང་ཡོདཔ་དང་ སྒྲ་སློབ་ཁོ་བོ་ཡང་ ཁྲི་ཐོག་ལུ་ དགོངས་པ་རྫོགས་སོངམ་ལས་ ལོག་སྟེ་ར་ ཆོས་རྗེ་འཕྲིན་ལས་རྒྱལ་མཚན་མཆོག་ རྗེ་ཁྲི་རབས་ ༤༤ པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་མཛད་གནང་ནུག། སྤྱི་ལོ་ ༡༨༩༡ པའི་ལོ་ལུ་ རྗེ་ཆོས་རྗེ་མཆོག་ དགོངས་ཞུ་མཛད་གནངམ་ལས་ གྲུབ་དབང་འཕྲིན་ལས་རྒྱ་མཚོ་མཆོག་ རྗེ་ཁྲི་རབས་ ༤༥ པའི་ཁྲི་ལུ་ མངའ་གསོལ་མཛད་གནང་ནུག། ཨིན་རུང་ གྲུབ་དབང་འཕྲིན་ལས་རྒྱ་མཚོ་མཆོག་ ཁྲི་ཐོག་ལུ་ ལོ་གསུམ་བཞུགས་པའི་ཤུལ་ ཁྲི་ཐོག་ཁར་དགོངས་པ་རྫོགས་སོངམ་ལས་ སྤྱི་ལོ་ ༡༨༩༤ གི་ལོ་ལུ་ གྲུབ་དབང་དམ་ཆོས་རྒྱལ་མཚན་མཆོག་ རྗེ་ཁྲི་རབས་ ༤༦ པའི་ཁྲི་ལུ་མངའ་གསོལ་མཛད་གནང་ནུག། གོང་གི་རྗེ་བཞིན་ རྗེ་མཁན་ཁྲི་རབས་ ༤༦ པ་གྲུབ་དབང་དམ་ཆོས་རྒྱལ་མཚན་མཆོག་ཡང་ རྗེའི་ཁྲི་ཐོག་ལུ་ར་ དགོངས་པ་རྫོགས་སོངམ་ལས་ སྤྱི་ལོ་ ༡༨༩༩ གི་ལོ་ལུ་ རྣལ་འབྱོར་པ་ཤེས་རབ་ལྷུན་གྲུབ་མཆོག་ རྗེ་མཁན་ཁྲི་རབས་ ༤༧ པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག། རྗེ་ཤེས་རབ་རྒྱལ་མཚན་མཆོག་གིས་ སྤྱི་ལོ་ ༡༩༠༡ གི་ལོ་ལུ་ དགོངས་ཞུ་མཛད་ནི་འདི་གིས་ གྲུབ་དབང་འཇམ་དབྱངས་རིན་ཆེན་མཆོག་ རྗེ་མཁན་ཁྲི་རབས་ ༤༨ པའི་ཁྲི་ལུ་ མངའ་གསོལ་མཛད་གནང་ནུག།<br>
+སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། སྡེ་སྲིད་ཁྲི་རབས་ང་བརྒྱད་པ་ སངས་རྒྱས་རྡོ་རྗེ་མཆོག་གིས་ རྒྱལ་ཁབ་བདེ་སྐྱིད་ཀྱི་ངང་ལུ་ མི་ལོ་བཅོ་བརྒྱད་ཀྱི་རིང་ སྡེ་སྲིད་བཟུང་གནང་བའི་ཤུལ་ སྤྱི་ལོ་ ༡༩༠༣ ཆུ་ཡོས་ཀྱི་ལོ་ལུ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ དགོངས་པ་རྫོགས་སོ་ནུག།</big>
+
+=== སྡེ་སྲིད་ཁྲི་རབས་མཐའ་མ་ང་དགུ་པ་ ས་སྐྱོང་མི་དབང་གསུང་སྤྲུལ་ཕྱོགས་ལས་སྐུ་འཕྲེང་ལྔ་པ་ ཡེ་ཤེས་དངོས་གྲུབ་མཆོག་གི་མཛད་རྣམ། ===
+==== ༡༽ སྡེ་སྲིད་མ་མཛད་གོང་གི་མཛད་རྣམ། ====
+===== དང་པ་སྡེ་སྲིད་ང་དགུ་པའི་སྐུ་འཁྲུངས་ཤིང་མཚན་གསོལ་གནང་ཚུལ་སྐོར། =====
+<big>ཞབས་དྲུང་་གསུང་སྤྲུལ་སྐུ་འཕྲེང་ལྔ་པ་ཕྱོགས་ལས་ཡེ་ཤེས་དངོས་གྲུབ་མཆོག་ནི་ བུམ་ཐང་སྟང་ཆུ་སྟོད་ཀྱི་གཡུས་ཚན་ནང་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་ང་གཅིག་ གནམ་ལོ་ལྕགས་ཕག་ལོ་ལུ་ སྐུ་འཁྲུངས་ནུག། སྐུ་ན་ཆུང་ཀུ་སྦེ་བཞུགས་པའི་སྐབས་མཚན་རིག་འཛིན་རྒྱ་མཚོ་ཟེར་གསོལ་ཡོདཔ་ཨིན་རུང་ ཤུལ་ལས་བླ་མ་ཁྲི་པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་མཛད་དེ་ རྗེ་ཁྲི་ཟུར་ཡོན་ཏན་རྒྱལ་མཚན་གྱིས་ མཚན་ཡེ་ཤེས་དངོས་གྲུབ་ཟེར་གསོལ་གནང་ནུག།</big>
+===== གཉིས་པ་སྐུ་ཡོན་བཞེས་ཏེ་བླ་མ་ཁྲི་པར་མངའ་གསོལ་མཛད་ཚུལ། =====
+<big>སྐུ་ན་ཆུང་ཀུ་ལས་ ཞབས་དྲུང་གསུང་སྤྲུལ་ཕྱོགས་ལས་བཞི་པ་ འཇིགས་མེད་རྡོ་རྗེའི་སྐུ་སྐྱེས་གསལ་ཏོག་ཏོ་སྦེ་གསུངས་ཏེ་ གདན་ས་གསང་སྔགས་ཆོས་འཁོར་ལུ་གདན་འདྲེན་ཞུ་སྟེ་ སྤྲུལ་སྐུའི་ངོས་འཛིན་དང་ཁྲི་མངའ་གསོལ་ཞུ་གནང་ནུག། དེ་ལས་རྗེ་ཁྲི་ཟུར་ཡོན་ཏན་རྒྱལ་མཚན་གྱིས་ མཚན་ཡང་ཡེ་ཤེས་དངོས་གྲུབ་ཟེར་གསོལ་དགོ་མི་ཡང་ མཁན་ཆེན་ཁྲི་རབས་སོ་གཅིག་པ་ཡོན་ཏན་རྒྱལ་མཚན་དང་ ཡོངས་འཛིན་ངག་དབང་དོན་ལྡན་ལས་ སྐུ་ཡོན་དང་དབང་ལུང་ཁྲིད་གསུམ་གསན་ཏེ་ དགུང་ལོ་བཅུ་བཞི་བཞེས་པའི་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་དྲུག་ཅུ་རེ་ལྔ་ ༡༨༦༥ ཤིང་གླང་ལོར་ བླ་མ་ཁྲི་པ་བཅོ་ལྔ་པའི་ཁྲི་ལུ་མངའ་གསོལ་བའི་སྐབས་ཨིན་པས།</big>
+===== གསུམ་པ་འཇིག་རྟེན་ཐ་སྙད་དང་ མཐར་ཐུག་དོན་དམ་པའི་ཆོས་མཁྱེན་པའི་བདག་ཉིད་དུ་འགྱུར་ཚུལ། =====
+<big>དེ་ཡང་སྤྱི་ལོ་ ༡༨༦༩ འི་ལོ་མཇུག་ལུ་ གསོལ་ཐབ་སྤུ་ན་ཁ་ལུ་ཕེབས་ཅིག་ བླམ་ཁྲི་པ་བཅུ་དྲུག་པའི་ཁྲི་ལུ་ཞབས་དྲུང་ཐུགས་སྤྲུལ་ལྔ་པ་འཇིགས་མེད་ཆོས་རྒྱལ་ཕེབས་ཞིནམ་ལས་ གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་དངོས་གྲུབ་མཆོག་ གདན་ས་གསང་ཆེན་ཆོས་འཁོར་ལུ་ཕེབས་ཏེ་ རིམ་གཉིས་བསྐྱེད་རྗོགས་ཀྱི་སྒོམ་པ་གནང་སྟེ་ རྟོགས་པས་རང་རྒྱུད་གྲོལ་ཞིང་ཐུགས་རྗེ་གིས་ གཞན་རྒྱུད་གྲོལ་བའི་ངོ་བོ་གཅིག་ལུ་གྱུར་པ་ལས་བརྟེན་ སྔོན་གྱི་རིང་ལུ་བྱུང་མ་མྱོང་བའི་ དཔལ་ལྡན་འབྲུག་པའི་ཆོས་སྐོར་ལན་ཐེངས་བཅུ་གསུམ་གྱི་བར་དུ་གནང་ཞིནམ་ལས་ ཆོས་ཀྱི་རྒྱུན་ཆུ་བོ་གངྒ་ལས་རིངམ་སྦེ་མཛད་ནུག།
+ལྷག་པར་དུ་ རིག་པའི་གནས་ལུ་མཁས་པ་དང་ལྷག་པར་དུ་ཕྱག་བཟོའི་ཕྱག་ལཱ་ ཞབས་དྲུང་སྐུ་གོང་མ་བཟུམ་སྦེ་ར་ མཁྱེན་པ་ལས་བརྟེན་ ནས་རྡོག་གཅིག་ལུ་བཅུ་གཅིག་ཞལ་རྒྱན་ཆ་ལུགས་ཡོངས་རྗོགས་ བརྐོས་གནངམ་མ་ཚད་ གདན་ས་སྤུང་ཐིམ་གཉིས་ལུ་ཡང་ ལྷ་མོ་རེ་མ་ཏིའི་ཞལ་འབགཔ་དང་ རྒྱལ་བའི་སྐུ་བརྙན་མང་རབས་ཅིག་བཞེངས་གནང་ནུག།</big>
+===== བཞི་པ་སྡེ་སྲིད་ཁྲི་ལས་ཟུར་ཏེ་ཁོ་རའི་གདན་སར་གནས་ཡོདཔ། =====
+<big>གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་དངོས་གྲུབ་མཆོག་ནི་ སྡེ་སྲིད་ཁྲི་ལས་ཟུར་ཏེ་ ཁོ་རའི་གདན་ས་གསང་ཆེན་ཆོས་འཁོར་ལུ་བྱོན་ཏེ་བཞུགས་མི་དེ་ཡང་ སྤྱི་ལོ་ ༡༨༧༨ དེ་ཅིག་ལུ་ ཐིམ་རྫོང་པ་དངོས་གྲུབ་ཀྱིས་ སྡེ་སྲིད་ཁྲི་ཟུར་མི་རྗེ་འཇིགས་མེད་རྣམ་རྒྱལ་ལུ་ངོ་རྒོལ་འབད་བའི་སྐབས་ སྡེ་སྲིད་ཁྲི་ལུ་སྐྱེད་ཚལ་པ་རྡོ་རྗེ་རྣམ་རྒྱལ་ཡོད་རུང་ དེ་ལུ་སྔོན་རྩིས་མ་བལྟ་བར་ ཕྱོགས་ལས་ཡེ་ཤེས་དངོས་གྲུབ་སྤུ་ན་ཁ་ལུ་སྦེ་ སྡེ་ཁྲིར་བཏོན་ཡོདཔ་ཨིན་རུང་ ཟླཝ་མ་ལངམ་ལས་ར་ སྤུངས་རྫོང་པ་ནི་ཕམ་སྟེ་ བྲོས་ཟུར་སོངམ་ད་སྡེ་སྲིད་ཁྲི་ལས་ཟུར་ཏེ་ ཁོ་རའི་གདན་ས་གསང་ཆེན་ཆོས་འཁོར་ལུ་བྱོན་ཏེ་བཞུགས་ནུག།</big>
+  
+==== ༢༽ སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བསྐོ་བཞག་གི་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་ང་བརྒྱད་པ་ དབྱངས་སློབ་སངས་རྒྱས་རྡོ་རྗེ་མཆོག་ནི་ སྤྱི་ལོ་ ༡༩༠༣ གྱི་ཆུ་ཡོས་ལོ་ལུ་ སྡེ་སྲིད་ཁྲི་ཐོག་ལུ་དགོངས་པ་རྫོགས་ཡོདཔ་ལས་ གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་དངོས་གྲུབ་མཆོག་ དགུང་ལོ་ང་གསུམ་པའི་ཐོག་ལུ་ གཞུང་ལྷན་རྒྱས་ཚོགས་ཀྱི་ཁྲི་འཛིན་ ཀྲོང་གསར་དཔོན་སློབ་ཨོ་རྒྱན་དབང་ཕྱུག་གིས་སྦེ་ སྡེ་སྲིད་ཁྲི་རབས་ལྔ་བཅུ་ང་དགུ་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་མི་དེ་ སྡེ་སྲིད་ཁྲི་རབས་ཀྱི་མཐའ་མ་ཨིན་མས།</big>
+  
+==== ༣༽ སྡེ་སྲིད་ཁྲི་ཐོག་གི་ཕྱག་ཤུལ། ====
+===== དང་པ་མཁན་ཆེན་ཁྲི་རབས་ ༤༩ པའི་རབ་གནས། =====
+<big>གྲུབ་དབང་རིག་འཛིན་སྙིང་པོ་མཆོག་ནི་ མཁན་ཆེན་ཁྲི་རབས་ ༤༩ པའི་ཆོས་ཀྱི་ཁྲི་ལུ་ འཇམ་དབྱངས་རིན་ཆེན་མཆོག་ སྤྱི་ལོ་༡༩༠༣ ལུ་མཁན་ཆེན་ཁྲི་རབས་ ༤༨ ལུ་དགོངས་ཞུ་བྱོནམ་ལས་བརྟེན་ མངའ་གསོལ་མཛད་གནང་ནུག།</big>
+===== གཉིས་པ་སྤ་རོ་ཀུན་དགའ་ཆོས་གླིང་གདན་ས་བཅགས་པ། =====
+<big>སྤྱི་ལོ་ ༡༩༠༤ ལུ་ གདན་ས་གསང་ཆེན་ཆོས་འཁོར་གྱི་ཞོལ་ལུ་ ཀུན་དགའ་ཆོས་གླིང་གི་གདན་ས་ག་ནི་ལས་མཛེས་ཆོས་དང་ བཀོད་པ་ཕུལ་དུ་ཕྱིན་པའི་གདན་ས་འདི་ཡང་བཅགས་ཏེ་གནང་ནུག།</big>
+   
+==== ༤༽ སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་པ་མཐའ་མ། ====
+<big>སྤྱི་ལོ་ ༡༩༠༦ མེ་རྟ་ལོར་ གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་དངོས་གྲུབ་མཆོག་ནི་ སྡེ་སྲིད་ཁྲི་ཐོག་ལུ་བཞུགས་པའི་མཛད་པ་མཐའ་མ་ར་ གོང་ས་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་ འབྲུག་བརྒྱུད་འཛིན་གྱི་རྒྱལ་པོར་མངའ་གསོལ་ཞུ་ནི་ལུ་ རྒྱབ་སྐྱོར་མཛད་དེ་ མ་འོངས་འབྲུག་རྒྱལ་ཁབ་ཀྱི་ཕན་བདེ་ བླ་ན་མེད་པའི་རྩ་བར་མཛད་གནང་ཞིནམ་ལས་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་ གདན་ས་གསང་ཆེན་ཆོས་འཁོར་ལུ་བྱོན་ཏེ་བཞུགས་ནུག།</big>
+   
+==== ༥༽ སྡེ་སྲིད་ཁྲི་ལས་དགོངས་ཞུའི་ཐ་མ་མཁན་པོའི་ཁྲི་ཐོག་བྱོན་པ། ==== 
+<big>དེ་ཡང་ སྡེ་སྲིད་ཁྲི་ལས་དགོངས་པ་ཞུས་ཏེ་ ལོ་ངོ་ ༩ དེ་ཅིག་ལངམ་ད་ སྤྱི་ལོ་ཆིག་སྟོང་དགུ་བརྒྱ་བཅོ་ལྔ་ (༡༩༡༥) ཤིང་ཡོས་ལོ་ལུ་ མཁན་ཆེན་ཁྲི་རབས་ ༥༢ པ་ དཔལ་ལྡན་སེངྒེ་དགོངས་ཞུས་བྱོནམ་ལས་ འབྲུག་རྒྱལ་དང་པ་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་གིས་ ཞབས་དྲུང་གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་དངོས་གྲུབ་མཆོག་ མཁན་ཆེན་ཁྲི་རབས་ ༥༣ པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་སྟེ་ ལོ་ངོ་གཉིས་ཀྱི་རིང་ དཔལ་ལྡན་འབྲུག་པའི་ཆོས་ཀྱི་དབུ་ཁྲིད་མཛད་གནང་ནུག། དེ་ལས་ སྤྱི་ལོ་ཆིག་སྟོང་དགུ་བརྒྱ་བཅུ་བདུན་ (༡༩༡༧) མེ་སྦྲུལ་ལོའི་སྐབས་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་ནང་རྟེན་གཙོ་བོ་ ཞབས་དྲུང་མ་ཆེན་གྱི་བཞུགས་ཁང་རྣམ་རྒྱལ་ཁང་བཟང་གསར་བཞེངས་གནང་སྟེ་ཕུལཝ་ད་ སྐུ་དམར་གདུང་གཉེན་པོ་ཞལ་ཕྱེ་བའི་རྐྱེན་བཟུམ་ཅིག་གིས་སྦེ་ མཁན་པོ་ཁྲི་ཐོག་ལས་ཞིང་བྱོན་སོ་ནུག།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
