/* ཕྱི་རྒྱལ་དང་མཐུན་འབྲེལ། */

--- a/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
+++ b/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
@@ -1,5 +1,20 @@
 === ཕྱི་རྒྱལ་དང་མཐུན་འབྲེལ། ===
 <big>༉ འབྲུག་གི་ཕྱི་འབྲེལ་སྲིད་བྱུས་ཀྱི་ལམ་ལུགས་འགོ་ཐོག་དང་པ་ མཐོང་རྒྱ་མྱོང་བཅུག་པའི་འབྲུག་གི་དབུ་ཁྲིད་ཚུ་གི་གྲས་ལས་ འབྲུག་རྒྱལ་པོ་འཇིགས་མེད་དབང་ཕྱུག་མཆོག་གིས་མཛད་གནང་ནུག། དེ་ཡང་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་གྱིས་ དུས་རབས་༡༧ པའི་ནང་འབྲུག་རྒྱལ་ཁབ་འདི་ རང་དབང་རང་བཙན་ཅན་ཅིག་སྦེ་བཟོ་གནང་ཞིནམ་ལས་ ཕྱི་རྒྱལ་མཐུན་འབྲེལ་གྱི་ལམ་ལུགས་འདི་ གཟུར་གནས་ཀྱི་སྲིད་བྱུས་ཅིག་སྦེ་ར་ལུས་ནུག། འབྲུག་རྒྱལ་གཉིས་པའི་རྒྱལ་སྲིད་སྐབས་ འཛམ་གླིང་ངེས་མེད་གནས་སྟངས་ཅན་ཅིག་ལུ་གྱུར་སྡོད་ཡོད་རུང་ འབྲུག་རྒྱལཔོ་འཇིགས་མེད་དབང་ཕྱུག་མཆོག་གིས་ སྔར་སྲོལ་-གཟུར་གནས་ཀྱི་སྲིད་བྱུས་ཐོག་ འཛམ་གླིང་དཔལ་འབྱོར་མར་ཉམས་ ༼༡༩༣༠༽ དང་འཛམ་གླིང་དམག་ཆེན་ ༢ པའི་ ༼༡༩༣༩ - ༡༩༤༥༽ གནས་སྟངས་ཚུ་ལས་ གནོད་སྐྱོན་ག་ནི་ཡང་མེད་པར་རྒྱལ་བརྒྱུད་སྐྱོངས་གནང་ནུག། ཨིན་རུང་ཁྱིམ་ཚང་རྒྱ་གར་རྒྱལ་ཁབ་ཀྱི་རང་བཙན་དང་ རྒྱ་ནག་རྒྱལ་ཁབ་ཀྱི་སྟོབས་ཤུགས་ཡར་འཕར་འགྱོ་མི་གིས་ འབྲུག་རྒྱལ་ཁབ་གྱི་རང་བཙན་དང་ཞི་བདེ་ལུ་རྟག་པ་མེད་པའི་ཉེན་འཚུབས་ཚུ་ ཕོག་ཡོདཔ་ཨིན་མས། སྤུ་ན་ཁའི་ཆིངས་ཡིག་ ༡༩༡༠ ཅན་མ་གིས་ འབྲུག་ལུ་བཱིརི་ཊིཤ་གཞུང་གི་སྐུ་ཚབ་ཡིག་ཚང་གཞི་བཙུགས་ གནང་ནིའི་གྲོས་མཐུན་མ་བཀོད་པས། བཱིརི་ཊིཤ་གཞུང་དང་ཟུང་ཕྱོགས་མཐུན་འབྲེལ་ཡང་སྒང་སྟོག་ལུ་གཞི་བཙུགས་འབད་ཡོད་པའི བཱིརི་ཊིཤ་གཞུང་གི་སྲིད་དོན་འགོ་དཔོན་གྱི་འགོ་འདྲེན་ཐོག་མཛད་གནང་ནུག། གནམ་ལོ་ ༡༩༢༧ ལུ་ བཱིརི་ཊིཤ་གཞུང་གི་སྲིད་དོན་འགོ་དཔོན་ཨེཕ་ཨེམ་བེ་ལི་གིས་ འབྲུག་རྒྱལ་གཉིས་པའི་གསེར་ཁྲི་མངའ་གསོལ་གྱི་དུས་སྟོན་ལུ་ བྱོན་ཡོདཔ་ད་ ཁོ་གི་ཤུལ་འཛིན་པ་ཚུ་ཡང་ འབྲུག་ལུ་བྱོན་ཡོདཔ་ལས་ མཇུག་ར་གནམ་ལོ་ ༡༩༤༧ ལུ་ཨེ་ཇེ་ཧོབ་ཀིནསི་ཨིནམ་ད་ ཁོ་གིས་འབྲུག་རྒྱལཔོ་མཆོག་ལུ་གཟེངས་བསྟོད་ཀྱིས་རྟགས་མ་ རྒྱ་གར་རྒྱལ་ཁབ་གྱི་དམག་སྡེའི་འགོ་དཔོན་དཔའ་བོ་</big>(Knight Commander of the Indian Empire) <big>ཕུལ་བ་བྱོན་ཡོདཔ་ཨིན་མས། སྤ་རོ་དཔོན་སློབ་ཚེ་རིང་དཔལ་འབྱོར་ ༼ཕྱི་རྒྱལ་དཔོན་ཁག་ཚུ་གི་དོན་ལུ་ ཨྱོན་དཔལ་རི་ཕོ་བྲང་བཞེངས་གནང་མི་༽ གིས་འབྲུག་རྒྱལ་ཁབ་དང་ཕྱི་རྒྱལ་གྱི་མཐུན་འབྲེལ་ འགོ་འདྲེན་འཐབ་ནི་ལུ་ལྷན་ཐབས་སྦོམ་བྱུང་ཡོདཔ་ཨིན་མས། དེ་ཡང་ ཕྱི་རྒྱལ་དཔོན་ཁག་ཚུ་འབྲུག་ལུ་སྤ་རོ་ལས་བརྒྱུད་དེ་ འོང་དོ་ཡོདཔ་ད་ ཁོ་གི་ལཱ་འགན་ཡང་བསུ་ལེན་དང་ མགྲོན་སྐྱོང་འབད་ནི་ཚུ་ཨིན་མས། འབྲུག་རྒྱལཔོ་འཇིགས་མེད་དབང་ཕྱུག་གིས་ རྒྱལ་སྲིད་སྐྱོང་གནང་པའི་སྐབས་ རྒྱ་གར་རྒྱལ་ཁབ་ནང་གཟིགས་སྐོར་ ཚར་གཉིས་ལས་མ་གནང་པས། དེ་ཡང་ གཟིགས་སྐོར་དང་པ་འདི་ ཁྲི་མངའ་གསོལ་བའི་ཤུལ་ལུ་ཤར་ཕྱོགས་རྫོང་ཁག་ཚུ་ནང་ ཞབས་སྐོར་གནང་པའི་སྐབས་ རྒྱ་གར་གུ་ཝཱ་ཧ་ཊི་ལུ་ཉིན་གྲངས་གཅིག་གི་རིང་ལུ་ གདན་འདྲེན་ཞུ་ཡོད་མི་ལུ་བྱོན་གནང་ནུག། གཟིགས་སྐོར་གཉིས་པ་འདི་ སྤྱི་ལོ་ ༡༩༣༥ ལུ་ ཀཱོལ་ཀ་ཊ་ལུ་རྒྱ་གར་རྒྱལ་ཚབ་ཀྱིས་ གདན་འདྲེན་ཞུ་མི་ནང་བྱོན་ཡོདཔ་ཨིན་མས། དེ་སྐབས་ རྒྱལ་བཙུན་དང་རྒྱལ་སྲས་ དེ་ལས་ དཔོན་གཡོག་མང་རབས་ཅིག་གིས་ ཕྱག་ཞུ་སྦེ་བྱོན་ཡོདཔ་ད་ གོང་གཟིམ་བསོད་ནམས་སྟོབས་རྒྱས་རྡོ་རྗེ་དང་ ཁོ་གི་སྐུ་འཁོར་ཚུ་ཡང་ ཕྱག་ཞུ་སྟེ་བྱོན་ཡོདཔ་ཨིན་མས། གཟིགས་སྐོར་ལས་ལོག་བྱོན་པའི་སྐབས་ རྡོ་རྗེ་གདན་གནས་སྐོར་གནང་ཐོག་ སྒང་སྟོག་ལས་སྦེ་ཧཱ་ཆུམ་སྦིས་ལས་བརྒྱུད་དེ་ལོགས་རྒྱལ་ཁབ་ནང་བྱོན་གནང་ནུག། གཟིགས་སྐོར་སྐབས་ མི་དབང་མཆོག་གིས་ གོང་འཕེལ་ལས་སྣའི་གྲོགས་རམ་དང་ སྤྱི་ལོ་ ༡༨༦༤-༡༨༦༥ གི་ ཌུ་ཝར་དམག་འཁྲུག་རྐྱབ་པའི་སྐབས་ འབྲུག་གི་ས་གནས་བདེ་ཝ་ཐང་བཱིར་ཊིཤ་གཞུང་གིས་མངའ་འོག་ལུ་ཚུད་ཡོད་མི་འདི་ ལོག་གནང་དགོ་པའི་ཞུ་བ་མཛད་ཡོདཔ་ཨིན་མས། ཨིན་རུང་བཱིར་ཊིཤ་གཞུང་གིས་ ངོས་ལེན་མ་འབད་བར་ཡོད་མི་ལུ་ མི་དབང་མངའ་བདག་མཆོག་ཐུགས་ཕམ་ཡོདཔ་ཨིན་རུང་ འབྲུག་རྒྱལཔོ་མཆོག་གིས་ བིར་ཊིཤ་གཞུང་དང་མཐུན་འབྲེལ་འཕྲོ་མཐུད་མཛད་ཡོདཔ་མས། དེ་བསྒང་གོང་གཟིམ་གྱིས་ རྒྱལ་སྤྱི་གནས་ཚད་ནང་ རང་བཙན་སྲུང་སྐྱོབ་ཀྱི་གནས་སྟངས་ལཱ་ཁག་ཡོད་ལུགས་ཀྱི་སྐོར་ལས་མཁྱེན་དོ་ཡོདཔ་མས། བཱིརི་ཊིཤ་གཞུང་ཡང་ འབྲུག་གི་བིར་ཊིཤ་གཞུང་ལུ་ཕན་ཚུན་ ལེགས་ཤོམ་ཅིག་སྦེ་ཧ་གོ་མ་ཚུགས་པར་ལུས་ནུག། དེ་ཡང་ བཱིརི་ཊིཤ་གཞུང་གིས་འབྲུག་གི་གོང་འཕེལ་ལས་སྣ་ལུ་ རྒྱབ་སྐྱོར་འབད་ནི་ལུ་ ཁེ་ཕན་ཅིག་མ་མཐོང་པས། བཱིརི་ཊིཤ་གཞུང་གིས་ ཁོང་རའི་ཁེ་ཕན་ལྟར་ འབྲུག་རྒྱལ་ཁབ་འདི་ བཱིརི་ཊིཤ་གཞུང་གི་དམིགས་པ་ལས་སོ་སོ་ཨིནམ་སྦེ་ར་ཆ་བཞག་བསྐྱེད་ནུག། རང་བཙན་ཡོད་པའི་འབྲུག་རྒྱལཁབ་འདི་ ཆིངས་ཡིག་འདི་གི་ཕྱོགས་ལས་ཕོགས་ལམ་ཡང་རིན་གོང་ཆུང་བའི་ཉེན་ཁ་ཡོད་པའི་ བཱིརི་ཊིཤ་དང་རྒྱ་གར་གྱི་བྱང་ཤར་ས་གོ་རྒྱ་ཚད་ ༢༥༠ འབད་མི་འཐོབ་ཡོདཔ་མས། བདེ་ཝ་ཐང་གི་སྐོར་ལས་ལོ་རྒྱུས་ཐོནམ་ད་ འདི་ལུ་གསལ་ཏོག་ཏོ་ཅིག་མེད་པར་ ཐད་ཀར་འདི་ཁོང་རྒྱལ་ཁབ་མིང་གཏམ་གྱི་དོན་ལུ་བཞག་ཡོདཔ་མས། གོང་ལུ་བཀོད་དོ་བཟུམ་ ཕྱི་གཞུང་གི་དམག་གི་རྒྱལ་ཁ་ངོ་ཚ་སི་སི་སྦེ་ཕམ་ཡོད་མི་ལས་ ཁོང་གི་སྟོབས་གཉིས་འབྲུག་པའི་ལག་པར་དེ་བསྒང་ སྤྱི་ལོ་ ༡༨༦༤-༡༨༦༥ གི་དམག་གི་སྐབས་ཐོབ་ཡོདཔ་མས། དེ་བསྒང་རྒྱ་གར་གཞུང་གིས་ རང་དབང་རང་བཙན་འཐོབ་ནི་གི་དུམ་ཁར་དཔག་ཡོདཔ་ལས། ཞོར་ཁ་ འབྲུགཔ་ཚུ་ལུ་ཙིགཔ་ཟ་སྡོད་ནུག། དེ་ཡང་ གསརཔ་ཨིན་པའི་ རྒྱ་གར་མི་སེར་རྒྱལ་ཁབ་ཀྱི་ སྲིད་བྱུས་ཚུ་ཁྱིམ་ཚང་རྒྱལ་ཁབ་ལས་ དཔྱེ་མི་བལྟ་ག་ཟེར་ཐེ་ཚོམ་ཆགས་ནུག། འབྲུག་རྒྱལ་པོ་འཇིགས་མེད་དབང་ཕྱུག་གིས་ བཱིརི་ཊིཤ་ལྷན་སྡེའི་དོན་གཅོད་སྐུ་ཚབ་ལུ་ དཀའ་ངལ་ཚུ་བསལ་ནིའི་དཔའ་ཅམ་ནུག། དེ་བསྒང་གསུངས་ཡོད་མི་ནང་ འབྲུག་རྒྱལ་ཁབ་འདི་ བཱིརི་ཊིཤ་གི་འོག་ལུ་ཚར་གཅིག་ཡང་མ་ཚུདཔ་ལས་ རང་བཙན་བསྲུང་ནི་ཐད་ཀར་གྱི་འགན་ཁུར་ཨིན་ཟེར་གསུངས་ནུག། འདི་ལུ་ ཕྱི་གཞུང་གིས་གསལ་ཏོག་ཏོ་ཅིག་སླབ་མ་བཏུབ་ལས་ ག་ར་ རྟག་པ་མེད་པར་སྡོད་པའི་བར་ རྒྱ་གར་གཞུང་གི་ གནས་སྐབས་ཀྱི་བློན་ཆེན་པཎ་ཌིད་ཇ་ཝ་ཧཱར་ལཱལ་ཎེ་རུ་གིས་ མཚམས་འཇོག་སྦེ་བཞག་ཡོདཔ་ལས་ འབྲུག་རྒྱལ་པོ་ལུ་མཐུན་འབྲེལ་གྱི་འཕྲིན་ཡིག་ཅིག་ སྤྱི་ལོ་ ༡༩༤༦ ལུ་བསྐྱེལ་གནང་ནུག། དེ་གི་ཤུལ་ལས་ རྒྱ་གཞུང་གིས་ འབྲུག་རྒྱལ་ཁབ་འདི་ ཨེ་ཤི་ཡཱན་མཐུན་འབྲེལ་གྲོས་བསྟུན་ནང་ ནཱིའུ་ཌེལ་ལི་ལུ་གདན་འདྲེན་ཞུ་ནུག། སྤྱི་ལོ་ ༡༩༤༧ སྤྱི་ཟླ་བརྒྱད་པའི་ སྤྱི་ཚེས་ ༡༥ ལུ་ རྒྱ་གར་གཞུང་རང་དབང་ཐོབ་ཡོདཔ་ལས་ འབྲུག་དང་རྒྱ་གར་གྱི་བར་ན་ ཆིངས་ཡིག་གསརཔ་གུར་ བདེ་སྒྲིག་གི་ལཱ་ཚུ་ལྷག་བསམ་གྱི་སྒོ་ལས་འགོ་བཙུགས་ནུག། ཧེ་མའི་ལོ་ ༼༡༩༤༦༽ ལུ་ གོང་གཟིམ་གྱིས་གཙོས་པའི་ འབྲུག་པའི་འཐུས་མི་སྡེ་ཚན་ ནཱིའུ་ཌེལ་ལི་ལུ་གནས་ཡུན་ཚུ་ བདེ་སྒྲིག་འབད་བར་འོང་ཡོདཔ་མས། སྤྱི་ལོ་ ༡༩༤༩ སྤྱི་ཟླ་བརྒྱད་པའི་སྤྱི་ཚེས་ ༨ ལུ་ རྒྱ་འབྲུག་གཉིས་ཀྱི་ཆིངས་ཡིག་ དེ་བསྒང་ སྤྱི་ལོ་ ༡༩༡༠ ལུ་མཚན་རྟགས་བཀོད་མི་འདི་བརྗེ་སོར་འབད་དེ་ ཆིངས་ཡིག་གསརཔ་འདི་ དར་རྒྱས་གླིང་ལུ་སྦེ་མཚན་རྟགས་བཀོད་གནང་ནུག། འདི་ནང་ རྒྱལ་ཁབ་གཉིས་ཀྱི་བར་ ཨེང་གོལོ་བཱུ་ཨཏ་ཊན་ཆིངས་ཡིག་གི་ཤུལ་བཞག་ལུ་གཞི་བཞག་སྟེ་ མཐུན་ལམ་དམ་ཟབ་བཞག་ནི་ཚུ་ཨིན་མས། རྒྱ་གར་མི་སེར་གཞུང་གིས་ འབྲུག་ནང་འཁོད་ཀྱི་ལས་དོན་ཚུ་ལུ་ བར་འཛུལ་མི་འབད་དོ་ཡོདཔ་དང་ ཕྱི་འབྲེལ་མཐུན་ལམ་ཐད་ཁར་ ལམ་སྟོན་ཚུ་རྒྱ་གཞུང་གིས་འབད་ནི་ཨིན་པས། བདེ་ཝ་ཐང་གི་ས་རྒྱ་ གྲུ་བཞི་ཀི་ལོ་མི་ཊར་ ༣༢ འབད་མི་འདི་ བཱིརི་ཊིཤ་གིས་ མི་ལོ་ ༨༠ དེ་ཅིག་བདག་དབང་འབད་ཡོད་མི་འདི་ རྒྱ་གཞུང་གིས་འབྲུག་པའི་དབང་ཚད་ལུ་ལོག་སྤྲོད་ཡོདཔ་ལས་ འདི་ལུ་ཕྲག་དོག་ལངས་ཡོདཔ་མས། ཆིངས་ཡིག་འདི་ སེམས་གཙོ་བོར་བཏོན་པའི་སྙིང་སྟོབས་ཀྱི་བརྡ་མཚོན་ རྒྱ་གར་གཞུང་གསརཔ་ནང་གནས་བཞིན་པ་ཨིན་ཟེར་ཨིན་མས། འདི་ ལྷོ་ཨེ་ཤི་ཡའི་མཉམ་འབྲེལ་གྱི་མཁས་རིག་གི་མངོན་གསལ་ཅིག་ཨིན་མས། དེ་མ་ཚད་ དེ་གིས་ རྒྱ་འབྲུག་གཉིས་ཀྱི་མཐུན་ལམ་འདི་སྒྲིང་སྒྲི་དང་ ལྷག་པར་ མ་འོངས་འབྲེལ་བ་ཟུང་འབྲེལ་ལོ་ངོ་བཅུ་ཕྲག་ལས་བཅད་འབྱུང་ཐབས་ལུ་ཨིན་མས།</big>
 
+
+=== འཛམ་གླིང་སྤྱི་ཚོགས་ རྒྱལ་སྤྱི་ཨ་ལུའི་གློ་བུར་མ་དངུལ། ༼ཡུ་ནི་སེཕ།༽ ===
+<big>༉ ཡུ་ནི་སེཕ་ ཡང་ན་ འཛམ་གླིང་སྤྱི་ཚོགས་རྒྱལ་སྤྱི་ཨ་ལུའི་གློ་བུར་མ་དངུལ་ཟེར་མི་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ལས་སྡེ་ཅིག་ཨིན། དེ་གིས་ ཨ་ལུ་ཚུ་ལུ་ མི་ཚེ་དང་འབྲེལ་བའི་གྲོགས་རམ་དང་ གོང་འཕེལ་གྱི་རྒྱབ་སྐྱོར་ཚུ་བྱིནམ་ཨིན། དེ་འབདཝ་ལས་ ལས་སྡེ་འདི་ ག་ཏེ་ལུ་ཡང་ཁྱབ་སྟེ་ཡོདཔ་མ་ཚད་ ཀུན་གྱིས་ངོས་འཛིན་འབད་ཚུགས་པའི་མི་སྡེའི་སྐྱིད་སྡུག་ལྟ་མི་ལས་ཁུངས་ངོ་མ་ཅིག་ཨིན། (ལི་ལི་དབང་ཕྱུག། ༢༠༠༨ ཤོག་གྲངས་ ༡༨༢།).<br>
+འཛམ་གླིང་སྤྱི་ཚོགས་རྒྱལ་སྤྱི་ཨ་ལུའི་གློ་བུར་མ་དངུལ་འདི་ འཛམ་གླིང་དམག་ཆེན་ ༢ པའི་ཤུལ་ལུ་ འཛམ་གླིང་ནང་ས་ཕྱོགས་ག་ཏེ་ཨིན་རུང་ རིས་མེད་ཀྱི་ཐོག་ལས་ཉེན་ཁ་ཅན་གྱི་གནས་སྟངས་ནང་ཡོདཔ་པའི་ཨ་ལུ་དང་ ཨ་ལུའི་མ་འོངས་མི་ཚེ་ དཀའ་སྡུག་མྱོང་སྲིད་མི་ཚུ་ བདག་འཛིན་འཐབ་སྟེ་གྲོགས་རམ་བྱིན་ནིའི་དོན་ལུ་ཨིན། དེ་འབདཝ་ལས་ ལས་སྡེ་འདི་ སྤྱི་ལོ་ ༡༩༤༦ ལུ་གཞི་བཙུགས་འབད་ཡོདཔ་ཨིན། སྤྱི་ལོ་ ༡༩༤༠ གི་ཤུལ་ལས་ ལས་སྡེ་འདི་གིས་ ཨ་ལུའི་བདེ་སྐྱིད་ལེགས་བཅོས་འབད་ནི་གི་དོན་ལུ་ སྤྱིར་བཏང་གི་ལས་རིམ་ཚུ་ནང་ འབད་བརྩོན་མཐའ་གཅིག་ཏུ་བསྐྱེད་དོ་ཡོདཔ་མ་ཚད་ ལྷག་པར་དུ་ཡར་རྒྱས་འགྱོ་བའི་བསྒང་གི་རྒྱལ་ཁབ་དང་གློ་བུར་ཉེན་འཚུབ་ཆེ་བའི་གནས་སྟངས་ཚུ་ལུ་གཙོ་བོར་བཏོནམ་ཨིན། ཡུ་ནི་སེཕ་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་རྒྱལ་སྤྱི་ཨ་ལུའི་གློ་བུར་མ་དངུལ་གྱི་ཚབ་སྦེ་ ནིའུ་ཡོག་ལུ་ འཛམ་གླིང་སྤྱི་ཚོགས་གདུང་སེལ་གཞིས་ཆགས་བདག་སྐྱོང་གིས་ སྤྱི་ལོ་ ༡༩༤༦ ལུ་གཞི་བཙུགས་འབད་ཡོདཔ་ཨིན།</big> (UNICEF for every child, 2017)
+<big>ལོ་དེ་ནང་ འཛམ་གླིང་སྤྱི་ཚོགས་ཡོངས་ཁྱབ་ལྷན་འཛོམས་ཀྱིས་ རྒྱལ་སྤྱི་ཨ་ལུའི་མ་དངུལ་ཟེར་དམག་འཁྲུག་གི་ཤུལ་ལུ་ གདུང་སེལ་གྱི་ལཱ་འབད་ནིའི་དོན་ལུ་ ལམ་ལུགས་གཞི་བཙུགས་འབད་ནི་ལུ་དམིགས་ཏེ་འགོ་བཙུགས་ནུག། སྤྱི་ལོ་ ༡༩༤༣ ལུ་ ལས་སྡེ་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ལམ་ལུགས་ཀྱི་གཏན་འཇགས་ཀྱི་ལས་ཁུངས་ལུ་གྱུར་ཏེ་ཡོདཔ་ཨིན། དེ་ལས་རིམ་གྱིས་སྦེ་ ད་ལྟོའི་ལས་སྡེ་གི་མིང་གཏན་འཁེལ་འགྱོ་ཡོདཔ་མ་ཚད་ དེ་གི་ཡིག་ཚང་ལྟེ་བ་འདི་ ནིའུ་ཡོག་གི་ཁྲོམ་སྡེ་ནང་རྐྱབ་ཡོདཔ་ཨིན།<br>
+སྤྱི་ལོ་ ༡༩༦༠ གི་སྐབས་ལུ་ཡུ་ནི་སེཕ་གི་ལས་སྣ་ཚུ་ རྒྱ་སྐྱེད་འབད་དེ་ དེའི་གྲངས་སུ་ ཨ་ལུའི་ཤེས་ཡོན་གྱི་དབང་ཆ་དང་ དེ་བཟུམ་སྦེ་ འཕྲོད་བསྟེན་དང་ ཟས་བཅུད་ཀྱི་དབང་ཆ་ཚུ་ཡང་བཙུགས་ནུག། སྤྱི་ལོ་ ༡༩༦༠ ལས་ཚུར་ ལས་སྡེ་འདི་གི་ལས་རིམ་ཚུ་ག་ར་ སྤྱི་ལོ་ ༡༩༨༩ ཅན་མའི་ཨ་ལུའི་ཐོབ་དབང་ཆིངས་ཡིག་གིས་ ལམ་སྟོན་འབད་དེ་ཡོདཔ་ཨིན། ཆིངས་ཡིག་འདི་གིས་ ཨ་ལུ་ག་ར་ཚད་ལྡན་གྱི་གཟུགས་ཁམས་དང་ ནད་གཞི་སྨན་བཅོས་ གཞན་ཡང་ གཟུགས་ཁམས་ཉམས་གསོ་འབད་ནི་ཚུ་སྤྱོད་ཚུགས་པའི་དབང་ཆ་གནངམ་ཨིན། སྤྱི་ལོ་ ༡༩༨༩ ལུ་འཛམ་གླིང་སྤྱི་ཚོགས་ཡོངས་ཁྱབ་ལྷན་འཛོམས་ཀྱིས་ ཨ་ལུའི་ཐོབ་དབང་གི་ཆིངས་ཡིག་ཆ་འཇོག་འབད་བའི་ཤུལ་ལུ་ ཡུ་ནི་སེཕ་གིས་ ཆིངས་ཡིག་འདི་ ལས་རིམ་ཚུ་ རྩམ་ད་ལུ་ ལམ་སྟོན་སྦེ་ལག་ལེན་འཐབ་ནུག། གནས་ཚུལ་བཟང་པོ་འདི་ སྤྱི་ལོ་ ༡༩༦༥ གི་ལོ་ལུ་ འཛམ་གླིང་སྤྱི་ཚོགས་རྒྱལ་སྤྱི་ཨ་ལུའི་གློ་བུར་མ་དངུལ་གྱིས་ འཛམ་གླིང་ཞི་བདེ་གི་གཟེངས་བསྟོད་རྟགས་མའི་གསོལ་རས་ཐོབ་ནུག། དེ་ལས་ རིམ་པ་བཞིན་དུ་ ལས་སྡེ་འདི་གིས་ ཨམ་སྲུ་དང་ དམིགས་བསལ་དུ་ ཡར་རྒྱས་འགྱོ་བའི་བསྒང་གི་ ཨམ་སྲའི་མཐའ་དོན་བལྟ་ནི་ཡང་འགོ་བཙུགས་ཅི། དཔེ་འབད་བ་ཅིན་ སྤྱི་ལོ་ ༡༩༨༠ ལུ་ ཡར་རྒྱས་ཀྱི་ལས་རིམ་ནང་ ཨམ་སྲུ་ཟེར་བའི་ལས་རིམ་ཅིག་འགོ་བཙུགས་ནུག། སྤྱི་ལོ་ ༡༩༨༢ ལུ་ཨ་ལུའི་འཕྲོད་བསྟེན་གྱི་ལས་རིམ་གསརཔ་ཅིག་འགོ་བཙུགས་མི་འདི་གིས་ གཟུགས་སྟོབས་ཡར་འཕར་གྱི་ལྟ་རྟོག་འབད་ནི་དང་ ཆུ་སྐམ་སླར་ལོག་སྨན་བཅོས་ </big>(oral rehydration therapy) <big>དེ་ལས་ ཨའི་གི་ཨོམ་བྱིན་ནི་ཚུ་གུར་ སྐུལ་ཁྱབ་བརྡ་སྤྲོད་འབད་ནི་ལུ་གཙོ་བོར་བཏོན་ནུག། </big> (UNICEF for every child, 2017).
+<big>འཛམ་གླིང་སྤྱི་ཚོགས་རྒྱལ་སྤྱི་ཨ་ལུའི་གློ་བུར་མ་དངུལ་འདི་ འཛིན་སྐྱོང་ལྷན་སྡེ་བཀོད་ཚོགས་ཀྱིས་སྐྱོང་དོ་ཡོདཔ་མ་ཚད་ ལཱ་ག་ཅི་ར་འབད་རུང་ འཛམ་གླིང་སྤྱི་ཚོགས་ཡོངས་ཁྱབ་ལྷན་འཛོམས་དང་ དཔལ་འབྱོར་དང་མི་སྡེ་ཚོགས་སྡེ་གི་ སྤྱིར་བཏང་སྲིད་བྱུས་ལམ་སྟོན་འདི་དང་འཁྲིལ་དགོ། བཀོད་ཚོགས་འདི་ ལོ་གཅིག་གི་ནང་འཁོད་ལུ་ ཚར་གསུམ་འཛོམ་ནི་ཡོད། འཛིན་སྐྱོང་བཀོད་ཚོགས་ཀྱིས་ ཡུ་ནི་སེཕ་གི་ལས་རིམ་བསྐྱར་ཞིབ་འབད་ནི་དང་། ལས་སྣ། སྲིད་བྱུས་དང་ལས་རིམ་ལ་སོགས་པའི་མ་དངུལ་ཚུ་ངོས་ལེན་འབདཝ་ཨིན། བཀོད་ཚོགས་འདི་ནང་ འཐུས་མི་ ༣༩ ཡོདཔ་དང་ དེ་ཚུ་གིས་ འཛམ་གླིང་སྤྱི་ཚོགས་ནང་ལུ་ ལུང་ཕྱོགས་སྡེ་ཚན་ ༥ གི་ངོ་ཚབ་འབདཝ་ཨིན། ཁོང་གི་ལཱ་ཚུ་ ལས་ཁང་གིས་སྦེ་འགོ་འདྲེན་འཐབ་དོ་ཡོདཔ་མ་ཚད་ ལས་ཁང་འདི་ནང་ ཚོགས་གཙོ་གཅིག་དང་ཚོགས་གཙོ་འོགམ་ ༤ ཡོད། ཡུ་ནི་སེཕ་གིས་ འཛམ་གླིང་རྒྱལ་ཁབ་ ༡༩༠ གི་ནང་ ཕྱག་ལཱ་གནང་དོ་ཡོདཔ་དང་ ཐ་ན་ ལྷོད་ཚུགས་པར་ གནམ་མེད་ས་མེད་ལཱ་ཁག་ཡོད་པའི་ས་གནས་ཚུ་ནང་ལུ་ཡང་  ན་གཞོན་དང་ཨ་ལུའི་སྐྱིད་སྡུག་བལྟ་བར་ལྷོད་དོ་ཡོདཔ་ཨིན། ལས་སྡེ་འདི་གི་མ་དངུལ་འབྱུང་ས་ངོ་མ་ར་ ཁས་བླངས་ཀྱི་ཐོག་ལས་ཞལ་འདེབས་བྱིན་མི་འདི་རྐྱངམ་གཅིག་ཨིནམ་ལས་ ཏི་རུ་ཕུད་རྡོག་གཅིག་ལས་མེད་རུང་ དཀའ་སྡུག་ཅན་གྱི་ཨ་ལུ་ཚུ་ལུ་ཟད་འགྲོ་གཏངམ་ཨིན། མ་དངུལ་ལོག་སྤྱོད་དང་ངན་ལྷད་དང་འབྲེལ་བའི་ལཱ་གི་དོགས་པ་ག་བཟུམ་ར་བྱུང་རུང་ ནང་འཁོད་རྩིས་ཞིབ་དང་བརྟག་ཞིབ་ཡིག་ཚང་གིས་ རྩིས་དཔྱད་འབདཝ་ཨིན།<br>
+དེ་མ་ཚད་ གཞུང་དང་གཞུང་མིན་ལས་སྡེ་ཁག་ཚུ་དང་ མཉམ་འབྲེལ་གྱི་ཐོག་ལས་འཛམ་གླིང་ནང་ ཨ་ལུའི་དཀའ་ངལ་བསལ་ནི་ལུ་རྩ་འགེངསམ་ཨིན། གློ་བུར་དང་ཚབས་ཆེན་གྱི་གནས་སྟངས་ནང་ལུ་ ཡུ་ནི་སེཕ་གིས་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ལས་སྡེ་ཚུ་སྣ་ཁྲིད་འབད་དེ་གདོང་ལན་འབད་དེ་ ཨ་ལུ་ཚུ་ལུ་ཉེན་སྲུང་ལྡན་པའི་འཐུང་ཆུ་དང་།འཕྲོད་བསྟེན། ཟད་བཅུད་དང་ཤེས་ཡོན་ཚུ་སྤྲོདཔ་ཨིན། ཁོང་གིས་ དུས་ཨ་རྟག་ར་ཨ་ལུ་ཚུ་རྩུབ་སྤྱོད། ལོག་སྤྱོད་དང་། དམའ་ཕབ་འབད་སྲིད་པའི་གནས་སྟངས་ཚུ་ལས་སྲུང་སྐྱོབ་འབདཝ་ཨིན། ལྷག་པར་དུ་ མ་རུང་པའི་གནད་དོན་ དཔེར་ན་ ལོ་ན་མ་སྨིན་པར་ལཱ་འབད་བཅུག་ནི། ལོ་ན་ཚོད་མ་རནམ་ལས་གཉེན་རྐྱབ་ནི། ཨ་ལུ་ཚོང་འབྲེལ་འཐབ་ནི། དབང་བཙོང་འདོད་སྤྱོད་འབད་ནི་དང་། བཀག་ཚུགས་པའི་སྟབས་མ་བདེ་བའི་གནས་སྟངས་ཚུ་ལས་སྲུང་སྐྱོབ་འབད་ནི། དེ་ལས་ སྤུད་ཚད་དང་ལྡན་པའི་ཤེས་ཡོན་དང་། ཕོ་མོ་འདྲ་མཉམ་གྱི་བསླབ་སྟོན་ལ་སོགས་པའི་གྲོགས་རམ་འབད་ནི་ལུ་ཡང་གཙོ་བོར་བཏོནམ་ཨིན།<br>
+འཛམ་གླིང་སྤྱི་ཚོགས་ རྒྱལ་སྤྱི་ཨ་ལུའི་གློ་བུར་མ་དངུལ་གྱིས་ འབྲུག་གཞུང་ལུ་ མཐའ་ཟུར་གྱི་ས་གནས་ཚུ་ནང་གཙང་སྦྲའི་མཁོ་ཆས་བཀྲམ་སྤེལ་འབད་ནི་ཚུ་ སྤྱི་ལོ་ ༡༩༧༤ ལས་ར་འགོ་བཟུང་སྟེ་རྒྱབ་སྐྱོར་གནང་སྟེ་ཡོདཔ་ཨིན། དེའི་ཤུལ་ལས་ ལས་སྡེ་འདི་གིས་ གཞུང་མིན་ལས་སྡེ་ཚུ་ལུ་གྲོགས་རམ་གཞན་ཡང་འབད་དེ་ ན་གཞོན་ཨ་ལུ་དང་ཨམ་སྲུ་ཚུ་གི་མི་ཚེའི་གནས་སྟངས་ཡར་རྒྱས་གཏང་ནི་ལུ་ ཕན་རླབས་བྱུང་སྟེ་ཡོདཔ་ཨིན། ཨ་ལུའི་ཐོབ་དབང་གི་ཆིངས་ཡིག་གུར་ གཞི་བཞག་སྟེ་ ཡུ་ནི་སེཕ་གིས་ གཞི་དོན་མ་འདྲཝ་ ༤ གུར་གཙོ་བོར་བཏོན་དོ་ཡོདཔ་དང་། དེ་ཡང་ འཕྲོད་སྟེན། ཟས་བཅུད། གཟུགས་ཁམས་དང་། ཨའི་དང་ཨ་ལུ་བདག་འཛིན་གྱི་ཞབས་ཏོག་འགྲུབ་ནི་ཚུ་ཨིན། ལྷག་པར་དུ་ ཨ་ལུ་ག་ར་ལུ་སྤུས་ཚད་ལྡན་པའི་ཤེས་ཡོན་འདྲ་མཉམ་སྦེ་བྱིན་ནི་ལུ་ཡང་དམིགས་གཏད་བསྐྱེདཔ་ཨིན། ༼ལི་ལི་དབང་ཕྱུག། ༢༠༠༨ ཤོག་གྲངས་ ༡༨༢-༡༨༣།༽).</big> 
+
+རྒྱབ་རྟེན།།
+# Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education .
+# Wangchuk, L.  (2008) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
+# UNICEF for every child. (2017, May). Retrieved from http://www.unicef.org/media/62371/file/convention-rights-child-at-crossroads-2019.pdf
+
 === ཁུངས་གཏུག། ===
 # Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education .
