--- a/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
+++ b/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
@@ -12,4 +12,6 @@
 འཛམ་གླིང་སྤྱི་ཚོགས་ རྒྱལ་སྤྱི་ཨ་ལུའི་གློ་བུར་མ་དངུལ་གྱིས་ འབྲུག་གཞུང་ལུ་ མཐའ་ཟུར་གྱི་ས་གནས་ཚུ་ནང་གཙང་སྦྲའི་མཁོ་ཆས་བཀྲམ་སྤེལ་འབད་ནི་ཚུ་ སྤྱི་ལོ་ ༡༩༧༤ ལས་ར་འགོ་བཟུང་སྟེ་རྒྱབ་སྐྱོར་གནང་སྟེ་ཡོདཔ་ཨིན། དེའི་ཤུལ་ལས་ ལས་སྡེ་འདི་གིས་ གཞུང་མིན་ལས་སྡེ་ཚུ་ལུ་གྲོགས་རམ་གཞན་ཡང་འབད་དེ་ ན་གཞོན་ཨ་ལུ་དང་ཨམ་སྲུ་ཚུ་གི་མི་ཚེའི་གནས་སྟངས་ཡར་རྒྱས་གཏང་ནི་ལུ་ ཕན་རླབས་བྱུང་སྟེ་ཡོདཔ་ཨིན། ཨ་ལུའི་ཐོབ་དབང་གི་ཆིངས་ཡིག་གུར་ གཞི་བཞག་སྟེ་ ཡུ་ནི་སེཕ་གིས་ གཞི་དོན་མ་འདྲཝ་ ༤ གུར་གཙོ་བོར་བཏོན་དོ་ཡོདཔ་དང་། དེ་ཡང་ འཕྲོད་སྟེན། ཟས་བཅུད། གཟུགས་ཁམས་དང་། ཨའི་དང་ཨ་ལུ་བདག་འཛིན་གྱི་ཞབས་ཏོག་འགྲུབ་ནི་ཚུ་ཨིན། ལྷག་པར་དུ་ ཨ་ལུ་ག་ར་ལུ་སྤུས་ཚད་ལྡན་པའི་ཤེས་ཡོན་འདྲ་མཉམ་སྦེ་བྱིན་ནི་ལུ་ཡང་དམིགས་གཏད་བསྐྱེདཔ་ཨིན། ༼ལི་ལི་དབང་ཕྱུག། ༢༠༠༨ ཤོག་གྲངས་ ༡༨༢-༡༨༣།༽).</big>
 
 === ཁུངས་གཏུག། ===
-# Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education .
+# Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education.
+# Wangchuk, L.  (2008) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
+# UNICEF for every child. (2017, May). Retrieved from http://www.unicef.org/media/62371/file/convention-rights-child-at-crossroads-2019.pdf
