--- a/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
+++ b/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
@@ -11,6 +11,16 @@
 དེ་མ་ཚད་ གཞུང་དང་གཞུང་མིན་ལས་སྡེ་ཁག་ཚུ་དང་ མཉམ་འབྲེལ་གྱི་ཐོག་ལས་འཛམ་གླིང་ནང་ ཨ་ལུའི་དཀའ་ངལ་བསལ་ནི་ལུ་རྩ་འགེངསམ་ཨིན། གློ་བུར་དང་ཚབས་ཆེན་གྱི་གནས་སྟངས་ནང་ལུ་ ཡུ་ནི་སེཕ་གིས་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ལས་སྡེ་ཚུ་སྣ་ཁྲིད་འབད་དེ་གདོང་ལན་འབད་དེ་ ཨ་ལུ་ཚུ་ལུ་ཉེན་སྲུང་ལྡན་པའི་འཐུང་ཆུ་དང་།འཕྲོད་བསྟེན། ཟད་བཅུད་དང་ཤེས་ཡོན་ཚུ་སྤྲོདཔ་ཨིན། ཁོང་གིས་ དུས་ཨ་རྟག་ར་ཨ་ལུ་ཚུ་རྩུབ་སྤྱོད། ལོག་སྤྱོད་དང་། དམའ་ཕབ་འབད་སྲིད་པའི་གནས་སྟངས་ཚུ་ལས་སྲུང་སྐྱོབ་འབདཝ་ཨིན། ལྷག་པར་དུ་ མ་རུང་པའི་གནད་དོན་ དཔེར་ན་ ལོ་ན་མ་སྨིན་པར་ལཱ་འབད་བཅུག་ནི། ལོ་ན་ཚོད་མ་རནམ་ལས་གཉེན་རྐྱབ་ནི། ཨ་ལུ་ཚོང་འབྲེལ་འཐབ་ནི། དབང་བཙོང་འདོད་སྤྱོད་འབད་ནི་དང་། བཀག་ཚུགས་པའི་སྟབས་མ་བདེ་བའི་གནས་སྟངས་ཚུ་ལས་སྲུང་སྐྱོབ་འབད་ནི། དེ་ལས་ སྤུད་ཚད་དང་ལྡན་པའི་ཤེས་ཡོན་དང་། ཕོ་མོ་འདྲ་མཉམ་གྱི་བསླབ་སྟོན་ལ་སོགས་པའི་གྲོགས་རམ་འབད་ནི་ལུ་ཡང་གཙོ་བོར་བཏོནམ་ཨིན།<br>
 འཛམ་གླིང་སྤྱི་ཚོགས་ རྒྱལ་སྤྱི་ཨ་ལུའི་གློ་བུར་མ་དངུལ་གྱིས་ འབྲུག་གཞུང་ལུ་ མཐའ་ཟུར་གྱི་ས་གནས་ཚུ་ནང་གཙང་སྦྲའི་མཁོ་ཆས་བཀྲམ་སྤེལ་འབད་ནི་ཚུ་ སྤྱི་ལོ་ ༡༩༧༤ ལས་ར་འགོ་བཟུང་སྟེ་རྒྱབ་སྐྱོར་གནང་སྟེ་ཡོདཔ་ཨིན། དེའི་ཤུལ་ལས་ ལས་སྡེ་འདི་གིས་ གཞུང་མིན་ལས་སྡེ་ཚུ་ལུ་གྲོགས་རམ་གཞན་ཡང་འབད་དེ་ ན་གཞོན་ཨ་ལུ་དང་ཨམ་སྲུ་ཚུ་གི་མི་ཚེའི་གནས་སྟངས་ཡར་རྒྱས་གཏང་ནི་ལུ་ ཕན་རླབས་བྱུང་སྟེ་ཡོདཔ་ཨིན། ཨ་ལུའི་ཐོབ་དབང་གི་ཆིངས་ཡིག་གུར་ གཞི་བཞག་སྟེ་ ཡུ་ནི་སེཕ་གིས་ གཞི་དོན་མ་འདྲཝ་ ༤ གུར་གཙོ་བོར་བཏོན་དོ་ཡོདཔ་དང་། དེ་ཡང་ འཕྲོད་སྟེན། ཟས་བཅུད། གཟུགས་ཁམས་དང་། ཨའི་དང་ཨ་ལུ་བདག་འཛིན་གྱི་ཞབས་ཏོག་འགྲུབ་ནི་ཚུ་ཨིན། ལྷག་པར་དུ་ ཨ་ལུ་ག་ར་ལུ་སྤུས་ཚད་ལྡན་པའི་ཤེས་ཡོན་འདྲ་མཉམ་སྦེ་བྱིན་ནི་ལུ་ཡང་དམིགས་གཏད་བསྐྱེདཔ་ཨིན། ༼ལི་ལི་དབང་ཕྱུག། ༢༠༠༨ ཤོག་གྲངས་ ༡༨༢-༡༨༣།༽).</big>
 
+=== འཛམ་གླིང་གསོ་བའི་ལས་ཚོགས་། ===
+<big>༉ འཛམ་གླིང་གསོ་བའི་ལས་ཚོགས་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་ལམ་ལུགས་ཀྱི་ནང་འཁོད་ལུ་ རྒྱལ་སྤྱི་གསོ་བའི་གནས་སྟངས་འཛིན་སྐྱོང་འབད་ནིའི་ནང་ འགོ་འདྲེན་འཐབ་མི་ དབང་འཛིན་གྱི་ལས་ཚོགས་ཅིག་ཨིནམ་མ་ཚད་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ ཆོག་གྱུར་ཅན་གྱི་ལས་ཁུངས་ཅིག་ཨིན་པའི་ཆ་ལས རྒྱལ་ཁབ་དང་། མཉམ་འབྲེལ་པ། མི་སེར་ཚུའི་གསོ་བའི་འཕྲོད་བསྟེན་་ཡར་རྒྱས་གཏང་ནི་དང་། གཞན་ཡང་ འགྲོ་བ་ཀུན་གྱི་གཟུགས་ཁམས་དང་སེམས་ཁམས་སྒྲིང་སྒྲི་སྦེ་བཞག་ཐབས་ལུ་ འཛམ་གླིང་ཉེན་སྲུང་འབད་ནི་དང་ ཉེན་ཁ་འབྱུང་སྲིད་པའི་གནས་སྟངས་ནང་ཡོད་མི་ཚུ་ལུ་ཞབས་ཏོག་ཞུ་ནི་ཚུ་ཨིན།</big> (Working for health, 2007)
+<big>སྤྱི་ལོ་ ༡༩༤༥ ལུ་ འཛམ་གླིང་སྤྱི་ཚོགས་གཞི་བཙུགས་གནང་ནིའི་དོན་ལུ་ དོན་གཅོདཔ་ཚུ་འཛོམས་ཏེ་བསྟུན་གྲོས་འབད་བའི་སྐབས་ འཛམ་གླིང་གསོ་བའི་ལས་སྡེ་ཡང་  གཞི་བཙུགས་འབད་ནི་སྦེ་གྲོས་ཐག་ཆོད་གནང་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༡༩༤༨ སྤྱི་ཟླ་ ༥ པའི་སྤྱི་ཚེས་ ༧ ལུ་ འཛམ་གླིང་གསོ་བའི་རྩ་ཁྲིམས་གསར་གཏོད་འབད་ཡོདཔ་ཨིན། དེ་ལས་ཚུར་ ཉིནམ་འདི་ ལོ་ཨ་རྟག་ར་ འཛམ་གླིང་གསོ་བའི་ཉིནམ་སྦེད་བརྩི་སྲུང་ཞུཝ་ཨིན། འཛམ་གླིང་གསོ་བའི་ཚོགས་འཛོམས་འགོ་ཐོག་ སྤྱི་ལོ་ ༡༩༤༧ སྤྱི་ཟླ་ ༦ པའི་ནང་འགོ་འདྲེན་འཐབ་ཡོདཔ་དང་ དེ་བསྒང་ འཛམ་གླིང་གསོ་བའི་ལས་སྡེ་འགོ་བཙུགས་གནང་མི་ འཐུས་མི་ ༥༥ ཡོད་ས་ལས་ འཐུས་མི་ ༥༣ གྱིས་ བཅའ་མར་གཏོགས་གནང་ནུག། དེ་བསྒང་ ལས་སྡེ་འདི་གི་གཙོ་རིམ་གལ་ཆེ་ཤོས་ར་ ཚད་པའི་ནད། ཨམ་སྲུ་དང་ཨ་ལུའི་འཕྲོད་བསྟེན། བད་ཀན་གློ་གཅོང་། ལུས་འབྲེལ་ལས་བརྟེན་པའི་ནད་གཞི། ཟད་བཅུད་དང་མཐའ་སྐོར་གཙང་སྦྲ་ཚུ་ཨིནམ་སྦེ་ངོས་འཛིན་འབད་ཡོདཔ་བཞིན་དུ་ ལཱ་འདི་ ད་ལྟོའི་བར་ན་ཡང་ འབད་དང་འབད་བཞིན་ཡོདཔ་ཨིན། གཞན་ཡང་ སྤྱི་ལོ་ ༡༩༤༨ ལུ་སྔོན་མ་ ནམ་ཡང་མ་བྱུང་པའི་ཚབས་ཆེན་གྱི་ནད་གཞི་ ཨེཌིསི་ཚུ་ཡང་ལས་སྡེ་འདི་གི་འགན་འཁྲི་གི་ནང་ཚུད་ནུག།</big> (Working for health, 2007)
+<big>ད་རེས་ འཐུས་མི་རྒྱལ་ཁབ་བསྡོམས་ ༡༩༤ དང་ འགན་རོགས་འཐུས་མི་ ༢ ཡོདཔ་ཨིན། རྒྱལ་ཁབ་ག་འབད་རུང་ཅིག་ ལས་སྡེ་འདི་གི་འཐུས་མི་སྦེ་འཛུལ་ཞུགས་འབད་དགོ་པ་ཅིན་ འཛམ་གླིང་གསོ་བའི་རྩ་ཁྲིམས་གུར་ཆ་འཇོག་གི་མཚན་རྟགས་བཀོད་དགོ། ལོ་བསྟར་བཞིན་དུ་ སྤྱི་ཟླ་ ༥ པའི་ནང་ འཐུས་མི་ཚུ་ ཇི་ནི་བཱ་༼སུའི་ཛར་ལེནཌ༽ལུ་ཡོད་པའི་ཡིག་ཚང་ལྟེ་བ་ནང་འཛོམས་ནི་ཡོད། དེ་བསྒང་ ལས་སྡེ་འདི་དང་འབྲེལ་བའི་སྲིད་བྱུས་དང་འཆར་དངུལ་ཚུ་ཆ་འཇོག་མཛདཔ་ཨིན། དེ་མ་ཚད་ གནས་ཡུན་ལོ་ངོ་ ༥ གི་དོན་ལུ་ཡོངས་ཁྱབ་མདོ་ཆེན་ཡང་བཙག་འཐུ་འབདཝ་ཨིན། ལས་སྡེ་འདི་ འཛམ་གླིང་གསོ་བའི་སྲིད་བྱུས་རྩོམ་སྒྲིག་འབད་མི་གི་ མངོན་མཐོའི་འདུས་ཚོགས་ཨིན། ལྷན་འཛོམས་ཀྱི་སྐབས་ལུ་ ཁྱད་ཚད་དང་ལྡན་པའི་རྒྱལ་ཁབ་འཐུས་མི་ ༣༤ ལོ་ངོ་ ༣ གྱིདོན་ལུ་འཛིན་སྐྱོང་ལྷན་སྡེའི་ནང་བཙག་འཐུ་འབདཝ་ཨིན། ལྷན་སྡེ་འདི་གི་ལཱ་འགན་ངོ་མ་ར་ ལྷན་འཛོམས་ནང་མཐའ་བཏོགསཔའི་གྲོས་ཆོད་དང་སྲིད་བྱུས་ཚུ་ལག་ལེན་འཐབ་ནི་དང་། གྲོས་སྟོན་འབད་ནི། ལཱ་འགན་འདི་ཚུ་འབདཝ་ད་ཕན་གྲོགས་འབད་ནི་ཚུ་ཨིན། སྤྱི་ལོ་ ༢༠༢༡ སྤྱི་ཟླ་ ༥ པའི་སྐོར་ཆ་ལུ་ ཀེན་ཡ་ལས་ཨིན་མི་ ཌོག་ཊར་པེ་ཊྲིག་ཨ་མོཊི་འདི་ འཛིན་སྐྱོང་ལྷན་སྡེ་གི་ཁྲི་འཛིན་ཨིན།<br>
+འཛམ་གླིང་གསོ་བའི་ལས་ཚོགས་ལུ་ ལུང་ཕྱོགས་ཡིག་ཚང་ ༦ ཡོད། དེ་ཡང་ ཁག་ཆེ་བའི་ས་གནས་ཚུ་ནང་ དམིགས་བསལ་གྱི་ཞབས་ཏོག་སྤྲོད་ནིའི་དོན་ལུ་ གཞི་བཙུགས་འབད་ཡོད། གསོ་བའི་ལས་སྡེ་གིས་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ལས་ཁུངས་གཞན་མི་ཚུ་དང་ གཞན་ཡང་ གཞུང་འབྲེལ་དང་གཞུང་མིན་གྱི་ལས་ཁུངས་ཁག་མ་འདྲཝ་ཚུ་དང་གཅིག་ཁར་ མཉམ་འབྲེལ་གྱི་ཐོག་ལས་ལཱ་ཚུ་འབདཝ་ཨིན། གསོ་བའི་སྨན་པ་དང་མཁས་མཆོག་ ༨༠༠༠ ལྷག་ཙམ་ཅིག་གིས་ ཇི་ནི་བཱ་ལུ་ཡོད་པའི་ཡིག་ཚང་ལྟེ་བ་དང་ འཐུས་མི་རྒྱལ་ཁབ་ ༡༤༧ གྱི་ནང་ཡོད་པའི་ཡིག་ཚང་ཚུ་ནང་ ཕྱག་ལཱ་གནངམ་ཨིན། གསོ་བའི་ལས་ཚོགས་ཀྱི་མ་དངུལ་འབྱུང་སའི་གཞི་གཉིས་ཡོད་ས་ལས་ དང་པ་འདི་ འཐུས་མི་རྒྱལ་ཁབ་རེ་རེ་བཞིན་དུ་ལས་གནས་རྩིས་བཏོན་ཐོག་ལས་ སྤྲོད་པའི་མ་དངུལ་དང་། གཉིས་པ་ ཁས་བླངས་ཀྱི་ཐོག་ལས་ཞལ་འདེབས་བྱིན་མི་གཉིས་ཨིན།<br>
+དུས་ཀྱི་འགྱུར་བ་དང་བསྟུན་ཏེ་འབྲུག་རྒྱལ་ཁབ་ཡང་ སྤྱི་ལོ་ ༡༩༦༠ ལས་ཚུར་ རྒྱལ་ཁབ་ནང་ཡར་རྒྱས་ཀྱི་གཞི་འགྱམ་བཙུགས་ཏེ་ གསོ་བའི་གནས་སྟངས་ཡང་ རིམ་གྱིས་སྦེ་ཡར་རྒྱས་གཏང་ནི་གི་དུས་ལུ་བབས་ནུག། དེ་ལས་ འབྲུག་རྒྱལ་ཁབ་ཡང་ འཛམ་གླིང་གསོ་བའི་ལས་ཚོགས་ཀྱི་འཐུས་མི་སྦེ་ སྤྱི་ལོ་ ༡༩༨༢ སྤྱི་ཟླ་ ༣ པའི་ཚེས་ ༨ ལུ་འཛུལ་ཞུགས་འབད་ཡོདཔ་ཨིན། སྤྱི་ལོ་ ༡༩༧༩ ལས་ཚུར་རྒྱལ་ཁབ་ནང་ གསོ་བའི་གནས་ཚད་ཡར་དྲག་གཏང་ཐབས་ལུ་ གཞི་རིམ་གསོ་བའི་གཅེས་སྐྱོང་ ཨཱལ་མ་ཨ་ཊ་</big> (alma ata) <big>གི་གསལ་བསྒྲགས་འདི་ལུ་གཙོ་བོར་བཟུང་ཞིནམ་ལས་ དུས་མཐུན་གསོ་བའི་ཞབས་ཏོག་སྤྲོད་ནི་ལུ་རྩ་འགེངས་ནུག། འཛམ་གླིང་གསོ་བའི་ལས་སྡེ་གིས་ འབྲུག་རྒྱལ་ཁབ་ལུ་གྲོགས་རམ་ངོ་མ་ར་ གནས་སྟངས་མ་འདྲཝ་ལྔ་ནང་འབད་དོ་ཡོདཔ་ཨིན། དེ་ཡང་ མི་སྟོབས་ཡར་རྒྱས་གཏང་ནི། གསོ་བའི་ལམ་ལུགས་སྒྲིང་སྒྲི་བཟོ་ནི། འཕྲོད་བསྟེན་གྱི་ཉེན་ཁ་མར་ཕབ་འབད་ནི། ནད་གཞི་མར་ཕབ་འབད་ནི། དེ་བཟུམ་སྦེ་ ཡུན་བརྟན་ཡར་རྒྱས་ཀྱི་དོན་ལུ་གསོ་བའི་གནས་སྟངས་ཡར་དྲག་གཏང་ནི་ཚུ་ཨིན།  འབྲུག་རྒྱལ་ཁབ་ནང་ལུ་ཡང་ འཛམ་གླིང་གསོ་བའི་ཡིག་ཚང་འདི་ སྤྱི་ལོ་ ༡༩༨༣ ལུ་ ཐིམ་ཕུག་ལུ་གཞི་བཙུགས་མཛད་ཡོདཔ་དང་ ཌོག་ཊར་ཨེམ་སའི་ཕུ་ལ་འདི་ མི་དམངས་གསོ་བའི་བདག་སྐྱོང་པ་དང་པ་གི་ལཱ་འགན་བཞེས་གནང་ནུག། ༼ལི་ལི་དབང་ཕྱུག། ༢༠༠༨། ཤོག་གྲངས་ ༡༨༣།</big>
+
+
+
+
 === ཁུངས་གཏུག། ===
 # Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education.
 # Wangchuk, L.  (2008) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
