--- a/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
+++ b/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
@@ -21,8 +21,21 @@
 
 
 
+=== འཛམ་གླིང་སྤྱི་ཚོགས། ===
+<big>༉ འཛམ་གླིང་སྤྱི་ཚོགས་འདི་མཐུན་མོང་མ་ཡིན་པའི་རྒྱལ་སྤྱི་གི་ལས་སྡེ་གཅིག་ཨིན། འཛམ་གླིང་ནང་བདེ་སྐྱིད་ཡུན་གནས་དང་མི་སྡེ་གོང་འཕེལ་གཏང་ནི་ལུ་ དམིགས་སྟེ་ རང་དབང་རང་བཙན་ཡོད་པའི་རྒྱལ་ཁབ་ཚུ་གཅིག་ཁར་བསྡོམས་ཞིནམ་ལས་ མོས་མཐུན་གྱི་ཐོག་ལུ་ལས་སྡེ་འདི་གཞི་བཙུགས་འབད་ཡོདཔ་ཨིན། འཛམ་གླིང་སྤྱི་ཚོགས་འདི་འཛམ་གླིང་གི་གཞུང་སྐྱོང་མེནམ་ལས་ ཁྲིམས་གསར་རྩམ་འབད་ནི་མེད་རུང་ སྤྱིར་བཏང་འཛམ་གླིང་ནང་བྱ་སྟབས་མ་བདེ་བའི་གནས་སྟངས་ཤརཝ་ད་ དཀའ་ངལ་ཞི་ཐབས་ལུ་སྲིད་བྱུས་ཚུ་བརྩམས་ཏེ་ཐབས་ལམ་ཚུ་སྟོནམ་ཨིན། (འཛམ་གླིང་སྤྱི་ཚོགས། ༢༠༡༠།</big> (United Nation, 2010).<br>
+<big>སྤྱི་ལོ་ ༡༩༤༥ ལུ་འཛམ་གླིང་དམག་ཆེན་ ༢ པ་མཇུག་བསྡུ་བའི་ཤུལ་ལུ་ རྒྱལ་ཁབ་མང་ཤོས་ར་ དབུལ་ཕོངས་ཀྱི་དཀའ་ངལ་གྱིས་འཛིན་ཏེ་  འཛམ་གླིང་ནང་ཞི་བདེ་གི་ས་བོན་ ལོག་བཙུགས་དགོ་པའི་རེ་བ་སྦོམ་བསྐྱེད་ནུག། དེ་ལས་ རྒྱལ་ཁབ་ ༥༡ གི་ངོ་ཚབ་ཚུ་སྤྱི་ལོ་ ༡༩༤༥ སྤྱི་ཟླ་ ༤ པའི་སྤྱི་ཚེས་ ༢༥ ལས་སྤྱི་ཟླ་ ༦ པའི་ཚེས་ ༢༦ ཚུན་ སཱན་ཕྼན་སིསི་ཀོ་ལུ་ཚོགས་པའི་ རྒྱལ་སྤྱི་གྲོས་ཚོགས་ནང་འཛོམས་ནུག། དེའི་ཤུལ་ལས་ཟླ་ངོ་ ༢ ཀྱི་རིང་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་བཀའ་ཁྲིམས་བཞེངས་ཏེ་དེ་གུར་ མཚན་རྟགས་བཀོད་དེ་ཡོདཔ་ཨིན། བཀའ་ཁྲིམས་དེ་གིས་ མ་འོངས་པ་ལུ་ ཧེ་མ་བྱུང་སྟེ་ཡོད་པའི་རྐྱེན་ཚུ་ འཛེམ་བཀག་འབད་ཚུགས་པའི་ རེ་བ་སྦོམ་བསྐྱེད་ནུག། བཀའ་ཁྲིམས་བཞེངས་ཚར་ཏེ་ ཟླཝ་ ༤ གི་ཤུལ་ལས་ གཞུང་འབྲེལ་གྱི་ཐོག་ལས་འཛམ་གླིང་སྤྱི་ཚོགས་འདི་ སྤྱི་ལོ་ ༡༩༤༥ སྤྱི་ཟླ་ ༡༠ པའི་ཚེས་ ༢༥ གི་ཉིནམ་ལས་ཕྱག་ལཱ་གནང་ནི་འགོ་བཙུགས་ཡོདཔ་ཨིན། དེ་བསྒང་བཀའ་ཁྲིམས་འདི་ རྒྱ་ནག་རྒྱལ་ཁབ། ཕྼནསི། སོ་ཝི་ཡེཊི་ཡུ་ནི་ཡན། ཡུ་ནཱའི་ཊེཊི་ཀིང་ཌོམ། ཡུ་ནཱའི་ཊེཊི་ཨིསི་ཊེཊི་བཅས་ གཞན་ཡང་འཐུས་མི་ རྒྱལ་ཁབ་ལེ་ཤ་གིས་རྒྱབ་སྣོན་ཆ་འཇོག་མཛད་དེ་ཡོདཔ་ཨིན། དེ་ལས་བཟུང་སྟེ་ ད་ཚུན་མི་ལོ་ ༧༥ གི་རིང་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱིས་ འཛམ་གླིང་ནང་ཞི་བདེ་དང་དགའ་སྐྱིད་མི་ཉམས་གོང་འཕེལ་གྱི་ཕྱག་ལཱ་མཛད་དང་མཛད་བཞིན་དུ་ཡོད། འཛམ་གླིང་སྤྱི་ཚོགས་ཡང་ དུས་ཀྱི་འགྱུར་བ་དང་འཁྲིལ་ཏེ་ རིམ་གྱིས་སྦེ་གོང་འཕེལ་འགྱོ་སྟེ་ཡོད་རུང་ མི་སྡེའི་ནང་སྟབས་མ་བདེཝ་བསལ་ནི་དང་གཅིག་གྲོགས་གཅིག་ཕན་གྱི་ལས་སྣ་བརྩམ་ནི་གི་དམིགས་ཡུལ་འདི་ འགྱུར་མེད་བརྟན་ཏོག་ཏོ་སྦེ་ར་ཡོདཔ་ཨིན།</big> (United Nation,  2010).<br>
+<big>འཛམ་གླིང་སྤྱི་ཚོགས་ནང་ ད་ལྟོ་གནས་བཞིན་ཡོད་པའི་འཐུས་མི་ཡོངས་བསྡོམས་ ༡༩༣ ཡོད། རྒྱལ་ཁབ་ག་ར་འབད་རུང་ འཐུས་མི་སྦེ་འཛུལ་ཞུགས་འབད་དགོ་པ་ཅིན་དང་པ་ར་ ཉེན་སྲུང་ཚོགས་སྡེ་གི་རྒྱབ་སྣོན་ངོ་སྦྱོར་དང་བསྟུན་ ཡོངས་ཁྱབ་ལྷན་འཛོམས་ཀྱིས་ངོས་ལེན་འབད་དགོ། འཇམ་གླིང་སྤྱི་ཚོགས་ལུ་ ཡན་ལག་འདུས་ཚོགས་ལེ་ཤ་ཡོད་པའི་ནང་ལས་གཙོ་ཅན་ཚུ་ཡང་ ཉེན་སྲུང་ཚོགས་སྡེ། དཔལ་འབྱོར་དང་མི་སྡེ་ཚོགས་སྡེ། བློ་གཏད་ཚོགས་སྡེ། རྒྱལ་སྤྱིའི་དྲང་ཁྲིམས་ཚོགས་སྡེ། འཛམ་གླིང་སྤྱི་ཚོགས་དྲུང་ཆེན་ཡིག་ཚང་ཚུ་ཨིན། འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་འཐུས་མི་ག་ར་ ཡོངས་ཁྱབ་ལྷན་འཛོམས་ཀྱི་འཐུས་མི་ཡང་ཨིནམ་ལས་ ཡོངས་ཁྱབ་ལྷན་ཚོགས་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་འདུས་ཚོགས་ཚུ་ལས་ འཐུས་མི་ཆ་ཚང་ཡོད་པའི་འདུས་ཚོགས་ཅིག་ཨིན། ལོ་བསྟར་བཞིན་དུ་ སྤྱི་་ཟླ་ ༩ པའི་ནང་འཐུས་མི་ཡོངས་རྫོགས་ ཡོངས་ཁྱབ་ལྷན་འཛོམས་ནང་བཅའ་མར་གཏོགསཔ་ཨིན། ཡོངས་ཁྱབ་ལྷན་འཛོམས་ཀྱིས་ལོ་བསྟར་བཞིན་དུ ཡོངས་ཁྱབ་ལྷན་འཛོམས་ཀྱི་ཚོགས་གཙོ/སྲིད་འཛིན་ཚུ་བཙག་འཐུ་འབདཝ་ཨིན།<br>
+ཉེན་སྲུང་ཚོགས་སྡེ་འདི་ རྒྱལ་སྤྱིའི་ཞི་བདེ་དང་ཉེན་སྲུང་གི་ཕྱག་ལཱ་མཛད་མི་གཙོ་བོ་ཅིག་ཨིནམ་ལས་ དེ་ནང་གཏན་འཇགས་ཀྱི་འཐུས་མི་ ༥ དང་སྐབས་ཐོབ་ཀྱི་འཐུས་མི་ ༡༠ སྦེ་བསྡོམས་ཀྱིས་འཐུས་མི་ ༡༥ ཡོདཔ་ཨིན། ཚོགས་སྡེ་དེ་གི་ཚོགས་གཙོ་གི་འགན་ཁུར་འདི་ ཟླ་རིམ་བཞིན་དུ་སོར་ཞིནམ་ལས་ སྐོར་རྒྱབ་རྐྱབ་སྟེ་ཕྱག་ལཱ་མཛདཔ་ཨིན། དཔལ་འབྱོར་དང་མི་སྡེ་ཚོགས་སྡེ་གི་ལས་འགན་གཙོ་བོ་ར་ འགོ་འདྲེན་འཐབ་ནི། སྲིད་བྱུས་བསྐྱར་ཞིབ་འབད་ནི། སྲིད་བྱུས་ཚུའི་སྐོར་ལས་གསུང་གྲོས་གནང་ནི། དཔལ་འབྱོར་དང་མི་སྡེའི་ནང་རང་བཞིན་གནས་སྟངས་ཚུ་གི་དོན་ཚན་གུར་ རྒྱབ་སྣོན་ངོ་སྦྱོར་འབད་ནི་དང་། རྒྱལ་སྤྱིའི་འཐུས་མི་ཚུ་གིས་ངོས་ལེན་འབད་ཡོད་པའི་ཆིངས་ཡིག་ཚུ་ལག་ལེན་འཐབ་ནི་འདི་ཨིན། ཚོགས་སྡེ་འདི་ལུ་ ཡོངས་ཁྱབ་ལྷན་འཛོམས་ཀྱི་བཙག་འཐུ་གྲུབ་པའི་འཐུས་མི་ ༥༤ ཡོད། བློ་གཏད་ཚོགས་སྡེ་གི་ལས་འགན་ངོ་མ་ར་ འཐུས་མི་རྒྱལ་ཁབ་ ༧ གྱི་མངའ་འོག་ལུ་ཡོད་པའི་བློ་གཏད་ས་མཚམས་ ༡༡ དེ་འཛིན་སྐྱོང་འབད་ནི་འདི་ཨིན། རྒྱལ་སྤྱིའི་དྲང་ཁྲིམས་ཚོགས་སྡེ་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་མངོན་མཐོའི་ཁྲིམས་ཁང་ཨིན། ཚོགས་སྡེ་འདི་གི་འགན་ཁུར་འདི་ ཁྲིམས་ཀྱི་རྩོད་གཤེར་དང་གཞན་རྩོད་གཞི་ཚུ་ རྒྱལ་སྤྱིའི་ཁྲིམས་མཐུན་ལྟར་ བསྟར་སྤྱོད་འབད་ནི་འདི་ཨིན།<br>
+འཛམ་གླིང་སྤྱི་ཚོགས་དྲུང་ཆེན་ཡིག་ཚང་ནང་ ཡོངས་ཁྱབ་དྲུང་ཆེན་གྱིས་གཙོས་པའི་གཞན་ཕྱག་ལཱ་གནང་མི་རྒྱལ་སྤྱིའི་འཐུས་མི་ཚུ་ལས་ལས་གཡོགཔ་སྟོང་ཕྲག་ཁྲི་ཕྲག་སྦེ་ཡོདཔ་ཨིན། འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་བཀའ་ཁྲིམས་ལྟར་དུ་ཡོངས་ཁྱབ་དྲུང་ཆེན་འདི་ བདག་སྐྱོང་སྤྱི་ཁྱབ་ཀྱི་འགོ་དཔོན་ཨིནམ་མ་ཚད་ འཛམ་གླིང་ནང་ཉེན་སྲུང་གི་དཀའ་ངལ་ག་བཟུམ་བྱུང་རུང་ ཉེན་སྲུང་ཚོགས་སྡེ་ནང་གྲོས་བསྡུར་འབད་དགོ་པའི་བཀའ་གནང་ཆོག།
+འབྲུག་རྒྱལ་ཁབ་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་འཐུས་མི་ ༡༣༢ པ་སྦེ་ སྤྱི་ལོ་ ༡༩༧༡ གི་ལོ་ལུ་འཛུལ་ཞུགས་འབད་ནུག། སྤྱི་ཚོགས་འདི་གི་ ཡིག་ཚང་ཡང་རྒྱལ་ཁབ་ནང་ སྤྱི་ལོ་ ༡༩༧༤ ལུ་རྐྱབ་ཡོདཔ་ཨིན། འབྲུག་གི་འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་སྲིད་བྱུས་དང་བཀའ་ཁྲིམས་ལུ་བརྩི་མཐོང་དང་གུས་ཞབས་ཆེན་པོའི་སྒོ་ལས་ཡར་རྒྱས་ཀྱི་ལཱ་འགན་ཚུ་ འཐུས་ཤོར་གང་ཡང་མེད་པར་འབད་བཞིན་དུ་ཡོད། སྤྱི་ལོ་ ༢༠༢༡ སྤྱི་ཟླ་ ༩ པའི་ཚེས་ ༢༡ ལུ་ འབྲུག་རྒྱལ་ཁབ་འཛམ་གླིང་སྤྱི་ཚོགས་ནང་འཛུལ་ཞུགས་འབད་དེ་མི་ལོ་ ༥༠ འཁོར་བའི་བརྩི་སྲུང་རྒྱས་ཞིང་རྒྱསཔ་སྦེ་འབད་ཡོདཔ་ཨིན།</big> (Bhutan celebrates its 50 years of membership to UN, 2021)
+
+
+
+
 === ཁུངས་གཏུག། ===
 # Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education.
 # Wangchuk, L.  (2008) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
 # UNICEF for every child. (2017, May). Retrieved from http://www.unicef.org/media/62371/file/convention-rights-child-at-crossroads-2019.pdf
 # Working for health. (2007). retrieved from http://www.who.int/about/brochure_en.pdf
+# Everything You Always Wanted To Know About The United Nations. (2010) New York, Department of Public Information. Retrieved from http://www.uni-siegen.de/mun-siegen/siegmun/everything_un.pdf
+# Ministry of Foreign Affairs (Bhutan). (2021). Bhutan Celebrates its 50 Years of Membership to UN. Thimphu: Retrieved from http://www.mfa.gov.bt/?p=11340
